--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [中国军舰台湾海峡对美国军舰过招 美方批危险行为](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E4%B8%AD%E5%9B%BD%E5%86%9B%E8%88%B0%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E5%AF%B9%E7%BE%8E%E5%9B%BD%E5%86%9B%E8%88%B0%E8%BF%87%E6%8B%9B-%E7%BE%8E%E6%96%B9%E6%89%B9%E5%8D%B1%E9%99%A9%E8%A1%8C%E4%B8%BA)
+ ```美国与加拿大罕见派军舰结伴穿行台湾海峡。美国军方指控中国派遣军舰以之字形超越随行监控，称有撞船危险。中国军方报告全程监测，并谴责在台湾海峡闹事。```0
   ## 6/4/2023 - [港人在压迫下的「六四」悼念：狱中禁食丶香港主教的祈祷……](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E6%B8%AF%E4%BA%BA%E5%9C%A8%E5%8E%8B%E8%BF%AB%E4%B8%8B%E7%9A%84-%E5%85%AD%E5%9B%9B-%E6%82%BC%E5%BF%B5-%E7%8B%B1%E4%B8%AD%E7%A6%81%E9%A3%9F%E4%B8%B6%E9%A6%99%E6%B8%AF%E4%B8%BB%E6%95%99%E7%9A%84%E7%A5%88%E7%A5%B7)
  ```今天是「六四事件」34周年，在港府高官明确将之定为「特别日子」後，至少已有四人在昨天被警方以「作出具煽动意图的作为」或「在公众地方行为不检」罪予以拘捕，当中包括天安门母亲运动成员刘家仪和前支联会执委关振邦。但港人今天仍继续以不同方式悼念，前支联会副主席邹幸彤狱中绝食34小时；天主教香港教区主教周守仁「为那些硬了的心祝祷」，愿「社会和国家」得疗愈；美国驻港澳总领事馆把脸书专页的图片转为六四纪念；以及更多以不同方式的悼念。```0
   ## 6/3/2023 - [六四34周年：六四纪念在今日台湾意味着什么？](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%89%B9%E5%88%AB%E8%8A%82%E7%9B%AE/20230603-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E5%9C%A8%E4%BB%8A%E6%97%A5%E5%8F%B0%E6%B9%BE%E6%84%8F%E5%91%B3%E7%9D%80%E4%BB%80%E4%B9%88)
@@ -57,5 +59,3 @@
  ```土耳其总统埃尔多安(TayyipErdogan)在今天举行的仪式上宣示就职。艾尔多安在上周末赢得连任随后将任命新政府内阁成员。```0
   ## 6/3/2023 - [印尼提乌战停战计划即刻遭谴责](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E5%8D%B0%E5%B0%BC%E6%8F%90%E4%B9%8C%E6%88%98%E5%81%9C%E6%88%98%E8%AE%A1%E5%88%92%E5%8D%B3%E5%88%BB%E9%81%AD%E8%B0%B4%E8%B4%A3)
  ```印度尼西亚国防部长苏比安托今天在新加坡举行的香格里拉国防和安全会议上提出了一项结束俄罗斯和乌克兰之间战争的计划，提及冻结战场敌对，战区与被俄罗斯占领区由联合国监督公投等，此举立即受到多数与会者的谴责。```0
-  ## 6/3/2023 - [六四前夕传抖音下令禁转“坦克、成龙、天安门”等敏感图文](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B%E5%89%8D%E5%A4%95%E4%BC%A0%E6%8A%96%E9%9F%B3%E4%B8%8B%E4%BB%A4%E7%A6%81%E8%BD%AC-%E5%9D%A6%E5%85%8B-%E6%88%90%E9%BE%99-%E5%A4%A9%E5%AE%89%E9%97%A8-%E7%AD%89%E6%95%8F%E6%84%9F%E5%9B%BE%E6%96%87)
- ```消息称中国短影音社群平台“抖音”在六四前夕，私下向各大网红与品牌方发布禁令，要求在3至5日这段期间，禁止发布他们列出一系列与六四有关的敏感图文。所列敏感涉及成龙等引发疑问。```0
