--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [天安门母亲：“永远不会忘记那个黑暗的夜晚”  网民发起六四静思节绝食一天](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06042023041129.html)
+ ```八九“六四”34周年日，北京“天安门母亲”群体的多名成员在公安的监视下，到北京万安公墓纪念逝者。天安门母亲群体表示，作为亡者的亲属，他们永远不会忘记那个黑暗的夜晚。有网民发起六四静思节绝食一天的活动。周六晚，中国境内的微信、QQ等社交账号被禁止更换头像。本周日是北京六四34周年纪念日。当天天安门广场和周边戒备森严，军警和便衣三步一岗，禁止路人聚集、停留。警察还检查路人的身份证。上午，一位经过天安门广场的外省人李先生告诉本台：“我在北京，天安门周边全都是人脸识别的摄像头，你路过，就有警察在喊，前面的人拦截下来，要查身份证、登记，便衣特别多。只要你犯一点事就直接刑事拘留。”在微信、QQ等聊天工具上，今年的六四周年日未见到有人纪念六四死难者的白菊花、蜡烛。对此，李先生说：“往年纪念日都有，今年打压特别狠，现在你露头就抓。现在你要是在网上发表，就判你三年刑期。”六四事件已经过去了34年，但它仍然是中国历史上最具争议性和敏感性的事件之一。六四静思节网民自发绝食一天湖南网民田先生告诉本台，周六晚，国内网民的微信、QQ被禁止更换头像，当天仍有人以“六四静思节”绝食一天：“可能没有以往的纪念热度，但还是有的。今天是唐荆陵倡导的静思节，我们群里的人绝食一天，以示抗议。大部分人会记住这一天的。腾讯QQ、微信从昨天晚上起，不让你修改头像。”当天上午，北京“天安门母亲”群体发言人尤维洁、成员黄金平、袁刃、郝建、段昌琪等人，在北京警方的“护送”下，前往万安公墓祭奠他们在六四事件中失去的亲人。86岁高龄的张先玲近期因身体不适，未能到场。六四难属：永不会忘记那个黑暗的夜晚现场视频中，6位难属身穿黑色衣服，向逝者鞠躬默哀。六四遇难者杨燕声的妻子黄金平在致辞中说：“六四34周年过去了，在这个刻骨铭心的日子，我们都聚集在西郊的万安公墓祭奠我们在1989年6月4日惨遭屠杀遇难的亲人。。。。。”祭文写道：三十四年前的今天，当时的政府动用野战军使用机枪、坦克和装甲车，在首都长安街以及其他重要街道上，无视马路上众多的民众，横行霸道、真枪实弹地向人群开枪，用坦克碾压，残暴地镇压了学生和市民们。我们的亲人，他们就是在那个血腥的夜晚倒在罪恶的枪弹下，为了心中的理想献出了宝贵的生命。还称，作为亡者的亲属，我们永远不会忘记那个黑暗的夜晚，永远记得。1989年春天，北京天安门广场发生了大规模抗议活动，数以万计的学生和市民聚集在广场上要求政治改革和反对腐败。然而，在当局的镇压下，这次运动以悲惨结局告终。天安门母亲群体成员电话通讯被屏蔽本台当天致电天安门母亲代表尤维洁、张先玲等人，但始终无法接通。记者多次致电张先玲家的座机，但记者能听到对方说话，对方听不到记者到声音。张先玲的家人在电话中说：“喂。。。，境外的电话就别打了，现在是在监控状态，您的境外电话被掐断了，听不到您的声音。”此次活动引起了海内外媒体和民众关注。许多人认为，“天安门母亲”的坚强与勇气令人感动，并呼吁中国政府应该正视历史、追求真相，并给那些无辜死难者一个交代。6月4日，在全球各地都有人纪念这个重要时刻，美国、台湾及香港等地，有民间组织集会或个人通过绝食一天的活动，表达对那些失去生命或被捕入狱者的怀念，并呼吁中国政府重新审视此事。记者古亭责编陈美华许书婷```0
   ## 6/3/2023 - [中国大使馆前“六四大屠杀34周年纪念会” 年轻人为主](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy2-06032023190759.html)
  ```由全美中国学生学者自治联合会主办的“六四大屠杀34周年纪念会”，6月3日下午2点在中国驻美大使馆门前的广场举行。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会，其中尤以年轻人为主。 不受雷雨阻挡年轻世代参与纽约六四游行民主女神像前华盛顿举办六四烛光悼念活动纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四34周年特别报导：接过广场上话筒的女青年 这是一场坚持了三十四年的集会。主办者依然是全美学自联。 【中国驻美大使馆前的六四纪念会】六四屠杀34周年，悼念和纪念活动在这里也举行了34次。这次以新一代的年轻人为主。pic.twitter.com/mkm0YfX15X—自由亚洲电台(@RFA_Chinese)June4,2023 今年的纪念会依然是在华盛顿中国驻美大使馆前，但已经从使馆对面的街心花园挪到了紧靠花园的马路边上，地界更为开阔；参会人员在马路和人行道上铺开，显得更有气势。由于去年底发生了席卷全国多个城市、以青年人为主的白纸运动，今年的六四大屠杀纪念会尤其强调了年轻人在民主运动中的作用。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会(记者王允拍摄)全美学自联理事、佐治亚大学博士生古懿在开幕词中引用了从美国哥伦比亚大学传出的诗句，“我们是广场上的遗孤，我们是野火后的新芽，”“我们在方舱里自救，我们在铁链下自由，”“我们曾经站在坦克前，我们也曾经站在四通桥上，我们今天依旧站在这里，我们明天还要站到你们面前。”中国民主运动海外联席会议主席魏京生也在发言中为新生代民主力量的崛起而感到欣慰，他说，“现在的年轻人有没出息的，但也有有出息的，就像今天来的年轻人，都是有出息的。”这句话引来众人热烈的掌声。中国民主运动海外联席会议主席魏京生（中）集会现场讲话（记者王允拍摄）这次参会的有不少是从纽约等美国各地赶来的中国民众。据在场的中国民主党全国委员会主席王军涛介绍，这次从纽约就来了17辆各种类型的轿车，总共98人。记者在现场看到，其中多是青年人的面孔。年仅18岁的中国留学生朱欣海更是远道从南面的得克萨斯州休斯敦赶来。他在会议上发言说，“我相信三十四年后的中国年轻人，他们依然是有种的，我相信他们依然是一群有希望的人。”他说，从去年大学校园里年轻人举起白纸的手中，他看到了希望，这一切都表达了中国年轻人的反抗精神。中国留学生朱欣海(记者王允拍摄)与以往不同的是，今年的全美学自联自由精神奖特别颁发给了两个人，一位是去年10月据传在北京四通桥上挂出要求习近平下台横幅的彭立发，另一位是多年来以网名“编程随想”撰写批评中国政府文章并广泛散发的阮晓寰。中国民主党全委会执行长陈闯创律师在给至今还在狱中的阮晓寰颁奖时说，“通过这种匿名的表达，匿名的身份，阮晓寰能够独立思考，不受外界的干扰和压力的影响，这种勇于表达并坚持个人观点的行为，体现了他对自由思想和言论的尊重和追求。在隐私权和互联网自由已经成为当下这个时代非常重要的课题的时候，阮晓寰可以说是个指路明灯。”在纪念仪式结束后，参加集会的二十多人把印有悼念六四罹难者的“国殇之柱”的巨幅招贴布完全牵引开来，从中国大使馆前的道路上缓缓走过。有一些片刻，招贴画上的“国殇之柱”顶端正对着中国大使馆楼顶飘扬的中国国旗。 活动现场照片(记者王允拍摄)记者：王允   编辑：梒青   网编：杰西```0
   ## 6/3/2023 - [不受雷雨阻挡  年轻世代参与纽约六四游行](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06032023115304.html)
@@ -27,5 +29,3 @@
  ```今年6月1日是第73个国际儿童节。中国非政府组织"新公民计划"日前发布《2023中国流动人口子女现状》，揭示出当前中国流动人口子女的生存状况。由于父母在中国不同城市迁徙，这个庞大的未成年人群体正遭遇什么样的挑战？ 后浪：输在起跑线上的孩子"留守儿童"家庭现状：团聚少问题多 根据联合国《儿童权利公约》的定义，儿童是指18岁以下的人口。如果不看数字，常人似乎很难想象，中国流动人口的子女人数已经达到1.38亿，占了中国儿童总数的近一半（46%）。也就是说，两个中国儿童中，就有一个是流动人口的子女。“新公民计划”的最新报告《2023中国流动人口子女现状：事实和数据》对此作了详实的研究，数据来源包括国家统计局第七次全国人口普查、《2020年中国人口普查年鉴》及历次人口普查和调查数据中关于中国儿童人口的描述分析，以及中国国家统计局、联合国儿童基金会、联合国人口基金联合发布的《2020年中国儿童人口状况：事实与数据》等等。在一起！在一起？作为儿童，与父母生活在一起似乎是天经地义。但对于中国的流动人口子女来说，与父母在一起却常常是困难的。根据“新公民计划”的这份报告，2020年，有1.08亿儿童不能与父母双方共同居住在一起，其中8922万是受人口流动影响的儿童。他们中很多因此成为留守儿童，与在外地工作的父母相隔遥远。仅河南省就有留守儿童超过600万。与此同时，能随着父母一起迁徙的儿童只占流动人口子女总数的一半稍多（51.5%）。而在那些对于外来人口居住限制较多的城市，这种随迁率就更低。2020年，北京市流动人口子女的随迁率只有22.5%，上海也只有25%，广州为27.6%。还有部分流动人口的子女随着父母进城之后，因为各种原因与父母分离而返乡。2021年，中国全国就有92万进城务工随迁子女独自返乡，其中大部分成为留守儿童。北京郊区一所为农民工子女所开办的学校中的儿童（美联社资料图）不同的挑战对于留守儿童来说，他们的挑战是不能和父母在一起，在成长期缺失父母的亲情、指导和帮助。而随父母迁居异地的儿童也依然面临很多挑战。“新公民计划”2022年发布的《2022中国流动人口子女现状》曾着重分析了随迁子女就学的情况，显示其中80%能入读公办学校，20%入读民办学校。但这些随迁子女在异地入读公办学校时，常常会遭遇不公平待遇。身在纽约的非营利组织“劳工观察”创始人李强介绍说，中国随迁子女要入读本地公立学校，一般都要交一笔本地居民不必承担的赞助费，“你想想，打工的一对夫妻一年收入还不到10万元人民币，还需要加班加点，然后一个小孩上学就要赞助一、两万。”李强指出，中国针对流动人口子女歧视性的规定还体现在一些只有本地居民才能享有的财政补助上，“比如餐饮补助，和学校对低收入群体的补助，还有校车补助，有各种各样由财政支付、但外来工无法享有的补助。”目前身在荷兰的异议人士林生亮来自深圳。在这个外地务工人员大量聚集的城市，人脉甚广的林生亮常常会被人央求帮助办理外地工子女的入学资质，“我身边很多人都是这种情况，他们很痛苦。每年到孩子入学的时候，我就觉得他们像是人质被绑架一样，非常痛苦。”在林生亮看来，对于一般的外地务工人员，其子女入读公立学校的条件显得比较苛刻，“你要交社保，还要有租赁（租房）合同，你才能进公立学校读书，否则就读不了公立学校，要去私立学校就要收费，私立学校的师资等各方面条件又不够好。”深圳从至少十年前就开始实行“积分入学”的做法，对深圳户籍和符合深圳市就读条件的非深圳户籍儿童实行统一积分，根据申请儿童监护人的户籍、住房以及父母学历、职称高低等情况，进行打分排名，排名高的优先入学。这种做法似乎是为了冲破户籍与非户籍之间的屏障，但这种做法是否科学和公平，外界依然有不少质疑。据中国官媒人民网2013年报道，中国教育科学研究院研究员储朝晖认为，这种积分制实则是负向政策，在义务教育阶段对受教育对象进行分门别类的划分就是对受教育者权利的侵犯，从本质上说也是违法行为。林生亮则观察到，这种表面公平的积分制有很多猫腻，很多时候排名都是暗箱操作，积分排名不公布，这也是引发教育平权运动的原因之一，“后来很多人去搞教育平权，去搞示威游行，后来才把这种做法稍微公平一点点。”但这里的公平似乎并没有取得普遍的认可，人们仍然可以经常在社媒上看到对于流动人口子女无法得到公平教育权利的抱怨。中国非政府组织"新公民计划"日前发布《2023中国流动人口子女现状》中的中国流动人口规模图（新公民计划截图）工作也受歧视不仅上学得不到公平，这些外来务工人员的未成年子女想去工作也同样会遭到歧视。林生亮介绍说，在深圳，一半的工作没有歧视性的规定，但与政府有关联的企事业单位就会有地域性规定，比如网格员、学校的行政后勤人员、水电燃气公司等单位就只会招聘深圳本地户口的子女。李强则观察到，这种现象是全国性的，只是各地方程度不同，“比如保安类协助公务员工作的编制外工作，这种工作一般都要招收本地村镇人口的子女，外来工的子女要想找到这种工作都是很困难的。”林生亮说，无论是上学还是就业，这些针对外来务工人员子女的做法都显失公平，“纳税人人人平等，作为外来务工人员来到这座城市，作出了那么多贡献，他们也同样缴这个税。” 记者：王允   责编：何平  网编：洪伟```0
   ## 6/1/2023 - [王丹出席民主峰会　希望德国议会关注中国人权个案](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ck-06012023100626.html)
  ```六四天安门34周年前夕，中国民运人士王丹受邀前往丹麦，参加哥本哈根民主高峰会。为期一周的欧洲行，王丹不但会见捷克总统帕维尔，针对中国问题交换看法外，也向德国自民党人权发言人海特提出，希望德国议会关注许志永等人权案件，并向中国施压。 海外华人连署许志永、丁家喜竞取诺贝尔和平奖专访丁家喜妻子罗胜春：中国政府在制造冤假错案郭飞雄被以"煽颠罪"重判　国际舆论呼吁放人海外民主人士推动许志永、丁家喜角逐诺贝尔和平奖联合国谴责中国重判许志永丁家喜　美国务院要求立即释放二人 非政府组织民主联盟基金会（AllianceofDemocracies）五月中举办第六届「哥本哈根民主高峰会」（CopenhagenDemocracySummit），除了台湾总统蔡英文透过视频在高峰会发表谈话，北约前秘书长、丹麦前总理拉斯穆森（AndersFoghRasmussen）也邀请中国民运人士，同时也是前六四学生领袖王丹与会。期间，王丹曾与捷克总统彼得·帕维尔（PetrPavel）针对中国问题交换看法。王丹：“比较核心的一点，他就提到现在欧洲国家在欧洲对华政策的制订上遇到一个问题，这个问题就是很多的欧洲国家是希望中国出来调停俄乌战争的，虽然他个人对此不是那么有信心，但必须正视这个现实。他问我怎么看，我说(中国)绝对不可能(调停)。“虽然捷克总统对中国持疑，然而王丹观察，更多欧洲政客或智库人员，选择相信中国，对习近平有所求，因此对华政策调整有限，但已经有进步。王丹：“这次我到欧洲，见到的国会议员和政要们，几乎很少听到要跟中国保持友好，最低都是保持竞争和警剔的态度。“王丹：“西方不该对中国人权灾难保持冷漠”而王丹也在德国针对人权问题，拜会德国自民党（FDP）人权发言人、国会议员彼得.海特（音译，PeterHeidt）。 前六四学运领袖王丹拜会德国自民党（FDP）人权发言人、国会议员彼得.海特（PeterHeidt）。（照片经王丹授权使用） 王丹：“我跟他们讲，发生的基本就是人权灾难，我觉得西方社会应该要有自己的人权坚持，不应该对这种人权灾难保持冷漠，我也特别列举几个案子，例如许志永、丁家喜的案子，例如说最近的案子，郭飞雄被重判的案子。““六四纪念馆”假帐号两天出现九个在结束欧洲行之际，王丹发现六四34周年前夕，开始有人针对当年的六四学运提出质疑。王丹：“我觉得事情过去34年，回头反思，有人会批評当初这些学生太激进，但我现在反思的结果，正好相反，我觉得当年的学生太理性。其实面对这样一个政权，我们当初犯的是跟现在西方政客一样的错误，就是以为对方是可以理性的，和平交谈的对象，但历史已经证明，根本就不是嘛，当年的学生那么的理性，结果换来的还是镇压。“另外，即将在美国曼哈顿开幕六四纪念馆，短短两天之内，居然在臉書、推特上出现九个假账号。 六四纪念馆将在今年六月四日开幕，近日却出现大量假帐号。（图/翻摄自王丹脸书照片经授权使用） 王丹：“这当然不可能是一般网民自发的行为，这显然是中共相关部门、情报部门、其它部门，专门组织集团性的破坏。”而这些假帐号不但意图混淆视听，王丹也担心中国网军试图用钓鱼的方式，钓出支持群众，不得不提防。 记者：郭宸绮  责编:嘉远  网编:何足```0
-  ## 6/1/2023 - [中国拒绝美中防长会晤　李尚福现身新加坡](https://www.rfa.org/mandarin/yataibaodao/junshiwaijiao/hx2-06012023114156.html)
- ```本周四，美国国防部长奥斯汀在东京举行美日防长会谈前重申了反对片面改变台湾现状，以及中国不应动用武力统一台湾等美方立场。中国防长李尚福则在拒绝与奥斯汀在香格里拉对话会举行双边会谈后转而与新加坡防长签署合作备忘录，并宣布两国成立热线。有学者指出，中方针对周边国家向美国靠拢，也在加紧展现外交拉拢姿态。 李尚福出任中国国防部长　美中军事交流何去何从？受美制裁上将成中国新任防长美中未来如何对话？ 美国国防部长奥斯汀（LloydAustin）展开任内对印太地区的第7次访问。他6月1日先前往东京，与日本防卫大臣滨田靖一会谈；2日出席新加坡第20届“香格里拉”对话会并将发表演说；此后，还将访问印度和法国。美国国防部5月29日表示，中国已拒绝美方提出在香格里拉场边举行两国防长会议的邀请。尽管美方事前通知中方，对中国国国防部长李尚福的制裁不妨碍美中两国防长会晤。美国国防部长奥斯汀（LloydAustin）展开任内对印太地区的第7次访问。6月1日，奥斯汀在东京与日本防卫大臣滨田靖一会谈。（路透社视频截图）中方：对话不能没有原则 美方：遗憾中国国防部发言人谭克非5月31日表示，“对话不能没有原则，沟通不能没有底线”，两国交流困难的责任完全在美方。他抨击美国不顾中方关切事项，制造人为障碍，严重破坏两国互信。奥斯汀对此表示遗憾，并重申拥有强大能力国家彼此对话的重要性，以管控危机，预防局势失控。奥斯汀提到中国最近对美方和盟友的飞机挑衅拦截，希望中方改变其作为，担心在某个时间点发生事件，中方可能非常迅速失控。美国国防部长奥斯汀（LloydAustin）展开任内对印太地区的第7次访问。6月1日，奥斯汀在东京与日本防卫大臣滨田靖一会谈。（路透社视频截图）台学者：美中各有内政外交考量现况无解台湾政治大学名誉教授丁树范接受自由亚洲电台采访分析：“美国总统拜登不太可能取消对李尚福的制裁，他要选连任，如果取消，马上会被共和党扣上对中国软弱，这部分无解。中国当然认为，你要制裁我，我何必跟你对话？这部分我觉得也的确无解。”不过丁树范认为，中方拒绝对话只是展现姿态：“每次中国有演习，美国一定派侦察机侦察，了解中国演习状况，收听无线电等，不管在南海、东海、台海。相信解放军经过两千年南海撞机事件，对这方面训练也会加强，空中发生互撞意外机率不高。”美日防长会面的同时，中国防长李尚福1日抵达新加坡，和新加坡国防部长黄永宏签署合作备忘录，宣布两国成立热线，建立军方高层对话管道。新加坡政府的声明指出：“此种高层通话开放热线，对于加强双方了解与互信相当重要。”6月1日，中国国防部长李尚福抵达新加坡，并与新加坡国防部长黄永宏签署合作备忘录，宣布两国成立热线。（路透社）学者：新加坡或可作为美中热线的转接站台湾的国防安全研究院所长苏紫云接受自由亚洲电台采访表示，中国自知被美国、英国、印度围堵，新加坡作为相对亲美、中立国家，中国借此进行外交铺陈，事实上中国跟新加坡设热线军事意义有限，新加坡和中国在南海没有主权争端，跟中国没有什么军事上可能的对抗。苏紫云说：“中国对美国热线处于铃声响，没有回答状态。中新热线必要时，也许可作为穿梭型转机，华盛顿请新加坡传递讯息这功能。” 丁树范认为，中国外交过去十年基本上失败：“因为习近平一直很强势，像对菲律宾等等。美国已经把菲律宾、韩国拉在旁边，中国看了顾虑，赶紧跟东南亚签国防部长热线对话，南海行为准则有进展。看到美国跟中国周边国家有进展，它也要表现善意，拉拢周边国家，是相互竞争关系。”奥斯汀强调更快速运交关键武器 履行对台安全承诺奥斯汀1日在东京接受日媒《日经亚洲》书面访谈重申美方立场，反对片面改变台海现状，以及中国不应动用武力统一台湾。他並表示，尽管与中国的冲突“既非迫在眉睫，也非无可避免”，美军将持续监测中国的挑衅行动，与盟友和伙伴提升台海和区域和平与战略稳定。奥斯汀提到，拜登政府很快将行使“总统拨款权”，向台湾提供美国武器系统或弹药，这代表华府将能更快速地运交关键武器，履行《台湾关系法》（TheTaiwanRelationsAct）所作承诺。苏紫云表示，奥斯汀部长表达反对片面改变现状的表态和去年一样，华盛顿形塑政策有可信度、稳定的前提下，邀请中方国防部长对话，已作到善尽国际风险控管的义务，释放愿意对话的态度。中国军机用非专业、不安全行动挑衅他国，言下之意，在这情况下有任何责任均由北京承担。苏紫云说：“奥斯汀加码重述美国会依照国防授权法、总统拨款权，近期快速一些军事装备交付台湾，一方面讲给中国听，二方面讲给台湾跟盟国听，美国会遵守对盟国的安全承诺。” 记者：夏小华   责编：许书婷、何平   网编：洪伟```0
