--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [六四34周年 天安门母亲吁中共公布真相及遇难者名单](https://www.voachinese.com/a/tiananmen-mothers-voice-out-for-truth-and-justice-prior-to-34th-anniversary-of-june-4th-incident-/7122168.html)
+ ```震惊世界的六四事件34周年当天，在北京的部分遇难者家属如同往年，在警方人员监视下，集体到墓地悼念死于当局动用坦克、机枪残暴镇压的亲人。六四难属群体天安门母亲（TiananmenMothers）再次通过国际媒体和互联网发声，仍然坚持该群体20多年前提出的三项诉求，即真相、赔偿、追责，并敦促中共当局公布六四惨案真相和遇难者名单，以期最终公正解决这一历史问题。```0
   ## 6/4/2023 - [中国国防部长：若中美发生激烈冲突对抗 那将是世界“不可承受之痛”](https://www.voachinese.com/a/china-seeks-dialog-says-clash-with-u-s-would-be-unbearable-disaster-20230604/7122151.html)
  ```中国国防部长李尚福周日（6月4日）表示，如果中美发生激烈的冲突对抗，那将是世界不可承受之痛，但中国寻求对话而非对抗。```0
   ## 6/4/2023 - [朝鲜抨击联合国开会讨论朝鲜卫星发射
@@ -42,5 +44,3 @@
  ```在进行了几个星期的艰难谈判后，美国总统乔·拜登星期五(6月2日)晚间就《财政责任法案》的通过发表讲话，强调了他与共和党人达成两党共识的能力。在拜登2024年竞选连任期间，这肯定将会是他再度凸显的一个主题```0
   ## 6/3/2023 - [美国国防部长告诉中国 会谈是避免危机的关键](https://www.voachinese.com/a/u-s-defense-chief-slams-china-for-lack-of-military-dialog-20230602/7121371.html)
  ```美国国防部长劳埃德·奥斯汀周六表示，他对中国不愿就军事危机管控进行接触深表关切，并警告说会谈是避免冲突的关键。```0
-  ## 6/3/2023 - [又有两名“誓言守护者”因冲击国会山事件被判刑](https://www.voachinese.com/a/oath-keepers-convicted-of-storming-capitol-get-latest-extremist-sentencings-20230602/7121343.html)
- ```两名极右翼组织“誓言守护者”的成员周五(6月2日)因煽动串谋和其他指控被判处三年监禁——这是与2021年1月6冲击国会山事件相关的最新判决。```0
