--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,18 @@
 
+  ## 6/4/2023 - [全球变暖会让巴拿马运河断航吗？](https://www.dw.com/zh/全球变暖会让巴拿马运河断航吗？/a-65770668?maca=chi-rss-chi-all-1127-rdf)
+ ```要了解全球变暖的经济代价，只需看看巴拿马运河的状况。由于中美洲降雨减少，运河水位下降。专家担心普通消费者最终可能会为此付出代价。```0
+  ## 6/4/2023 - [两座纳粹“跨步马”雕塑展出引发争议](https://www.dw.com/zh/两座纳粹-跨步马-雕塑展出引发争议/a-65771488?maca=chi-rss-chi-all-1127-rdf)
+ ```希特勒政府委托艺术家们制作了数千件艺术品，用来宣传纳粹政权的力量。其中包括两座“跨步马”青铜雕像，而它们现在将在柏林的博物馆展出，引发了舆论争议。```0
+  ## 6/4/2023 - [股市滑坡 百万富翁人数减少](https://www.dw.com/zh/股市滑坡-百万富翁人数减少/a-65803536?maca=chi-rss-chi-all-1127-rdf)
+ ```去年全球低迷的股市，也令很多富豪的财富大幅缩水。百万富翁俱乐部的人数明显低于往年。```0
+  ## 6/4/2023 - [谁在为全球反塑料污染公约制造障碍？](https://www.dw.com/zh/谁在为全球反塑料污染公约制造障碍？/a-65782004?maca=chi-rss-chi-all-1127-rdf)
+ ```来自175个国家的代表聚集在巴黎联合国教科文组织总部密集谈判，期望达成一项应对塑料污染的全球条约。应该聚焦原生塑料还是再生塑料？环保组织担心谈判的方向走偏了。```0
+  ## 6/4/2023 - [日本出台新政策：每年投入3.5万亿日元“催生”](https://www.dw.com/zh/日本出台新政策：每年投入3-5万亿日元-催生/a-65807886?maca=chi-rss-chi-all-1127-rdf)
+ ```日本政府宣布每年投入约3.5万亿日元“催生”。出生率下降趋势已对社会诸多方面造成严重影响。```0
+  ## 6/4/2023 - [基因技术 - 粮食生产的持久发展之路](https://www.dw.com/zh/基因技术-粮食生产的持久发展之路/a-65808887?maca=chi-rss-chi-all-1127-rdf)
+ ```围绕转基因食品，有着各种各样令人不安的传言。但事实上，随着转基因技术的不断提升，越来越多的专家都认为，持久性的粮食生产获得了重要和安全的方法。```0
+  ## 6/4/2023 - [无人机袭击俄罗斯的背后究竟是怎么回事？](https://www.dw.com/zh/无人机袭击俄罗斯的背后究竟是怎么回事？/a-65803958?maca=chi-rss-chi-all-1127-rdf)
+ ```俄罗斯对乌克兰的战争中出现新的形势：在俄罗斯领土上更经常地出现军事袭击。这背后是怎么一回事，西方又如何反应？```0
   ## 6/4/2023 - [六四週年之際 王丹陷性騷風暴](https://www.dw.com/zh/六四週年之際-王丹陷性騷風暴/a-65818250?maca=chi-rss-chi-all-1127-rdf)
  ```中國六四學運領導人王丹日前遭一名台灣男子指控性騷擾，包含強吻與強暴未遂。指控者在六四34週年這天召開記者會，要求道歉否則提告。隨後，王丹回應：歡迎提告，支持用法律的方式尋找事情的真相。```0
   ## 6/4/2023 - [客座評論：台灣人為甚麼要知道六四？](https://www.dw.com/zh/客座評論：台灣人為甚麼要知道六四？/a-65818108?maca=chi-rss-chi-all-1127-rdf)
@@ -7,10 +21,10 @@
  ```“六四”34周年前夕，在地图应用程序百度地图、高德地图和腾讯地图上用在中国大陆普遍使用的简体中文搜索“四通桥”，将出现“未找到相关地点”的信息。此前一直挂在四通桥上写有桥名的路牌也被拆除。```0
   ## 6/3/2023 - [德语媒体：中国是否会摧毁德国工业？](https://www.dw.com/zh/德语媒体：中国是否会摧毁德国工业？/a-65816455?maca=chi-rss-chi-all-1127-rdf)
  ```《商报》担忧，中国凭借廉价大生产优势，将会威胁到德国产业的根基，德国政界必须尽快采取行动避免去工业化。《新苏黎世报》则刊发客席评论，指出尽管专制中国屡次打击民主运动，但是人类的自由的渴求永远不会被扼杀。```0
-  ## 6/3/2023 - [普京逮捕令：外交豁免权效力有多大？](https://www.dw.com/zh/普京逮捕令：外交豁免权效力有多大？/a-65816473?maca=chi-rss-chi-all-1127-rdf)
- ```南非即将于夏季举办金砖国家峰会，被国际刑事法院发布逮捕令的俄罗斯总统普京也受邀出席。身背逮捕令的普京如何与会？```0
   ## 6/3/2023 - [泽连斯基：乌克兰已做好反攻准备](https://www.dw.com/zh/泽连斯基：乌克兰已做好反攻准备/a-65816464?maca=chi-rss-chi-all-1127-rdf)
  ```乌克兰总统泽连斯基表示，目前已经为反攻战做好了准备，他还提到乌克兰需要更多爱国者导弹以抵御俄军的空袭。与此同时，在俄罗斯境内近日也出现多起空袭事件，但乌克兰方面否认与之有关。```0
+  ## 6/3/2023 - [普京逮捕令：外交豁免权效力有多大？](https://www.dw.com/zh/普京逮捕令：外交豁免权效力有多大？/a-65816473?maca=chi-rss-chi-all-1127-rdf)
+ ```南非即将于夏季举办金砖国家峰会，被国际刑事法院发布逮捕令的俄罗斯总统普京也受邀出席。身背逮捕令的普京如何与会？```0
   ## 6/3/2023 - [《5月35日》：香港「六四記憶」能移植台灣嗎？](https://www.dw.com/zh/《5月35日》：香港「六四記憶」能移植台灣嗎？/a-65816201?maca=chi-rss-chi-all-1127-rdf)
  ```香港六四紀念劇《5月35日》無法在港公演，今年首度移師台灣——這對香港人與台灣人來說有什麼意義？香港逐漸被「清洗」的六四記憶，能在台灣移植、落地嗎？DW採訪幕後團隊與學者理解他們的答案。```0
   ## 6/3/2023 - [美国中央情报局长秘密访问中国](https://www.dw.com/zh/美国中央情报局长秘密访问中国/a-65815540?maca=chi-rss-chi-all-1127-rdf)
@@ -31,18 +45,10 @@
  ```D小调托卡塔是家约翰·塞巴斯蒂安·巴赫最脍炙人口的管风琴作品之一，热情奔放、气势宏大。```0
   ## 6/2/2023 - [德国向右转？选项党与社民党的支持率齐平](https://www.dw.com/zh/德国向右转？选项党与社民党的支持率齐平/a-65809300?maca=chi-rss-chi-all-1127-rdf)
  ```如果下周日举行联邦议院选举，德国右翼的选项党将获得18%的席位，与社民党相当。为什么会这样呢？```0
-  ## 6/2/2023 - [金磚五國覓替代貨幣 籲重新平衡世界秩序](https://www.dw.com/zh/金磚五國覓替代貨幣-籲重新平衡世界秩序/a-65800252?maca=chi-rss-chi-all-1127-rdf)
- ```金磚5國外長1日在南非舉行會談，除了呼籲「重新平衡」世界秩序，也討論尋找美元的替代貨幣。俄羅斯總統普京是否參加金磚國家8月峰會，也引發關注。為什麼此事成為關注焦點？```0
   ## 6/2/2023 - [德语媒体:供应链法让欧企将市场让与中国](https://www.dw.com/zh/德语媒体-供应链法让欧企将市场让与中国/a-65807774?maca=chi-rss-chi-all-1127-rdf)
  ```《商报》刊发评论指出，中国经济疲软也将让依赖对华出口的德国企业蒙受损失。《法兰克福汇报》则担心，旨在让欧洲企业为境外供应链承担社会与环境责任的欧盟供应链法案，很可能会导致欧洲人将市场拱手让给努力拓展经济影响力的中国。```0
-  ## 6/2/2023 - [李辉呼吁停止输送武器 中国或再派员促谈](https://www.dw.com/zh/李辉呼吁停止输送武器-中国或再派员促谈/a-65808037?maca=chi-rss-chi-all-1127-rdf)
- ```中国特使李辉结束对乌克兰、俄罗斯等国的访问后在北京举行记者会。他批评美媒称他提议的停火将让俄罗斯控制乌克兰部分领土。但有记者提问中国在如何处理乌克兰被占领土问题上的立场时，他未予直接回应。```0
-  ## 6/2/2023 - [《小美人魚》中國票房差 種族歧視作祟？](https://www.dw.com/zh/《小美人魚》中國票房差-種族歧視作祟？/a-65804107?maca=chi-rss-chi-all-1127-rdf)
- ```由黑人擔綱女主角的迪士尼真人版電影《小美人魚》，受到美國觀眾支持、中國民眾冷落，上映後更遭中國官媒批評「過度政治正確」、敘事手法「懶惰」。事件背後，隱藏著哪些更深層的議題？```0
   ## 6/2/2023 - [RCEP对15个签署国全面生效](https://www.dw.com/zh/rcep对15个签署国全面生效/a-65804548?maca=chi-rss-chi-all-1127-rdf)
  ```据中国商务部官网消息，6月2日，《区域全面经济伙伴关系协定》（RCEP）对菲律宾正式生效，标志着RCEP对15个成员国全面生效。```0
-  ## 6/2/2023 - [瑞士拒绝他国援乌瑞士军火 恪守中立引争议](https://www.dw.com/zh/瑞士拒绝他国援乌瑞士军火-恪守中立引争议/a-65803626?maca=chi-rss-chi-all-1127-rdf)
- ```瑞士国民议院6月1日晚间投票否决了一项旨在允许第三国向乌克兰出售瑞士军火物资的法案。俄乌战争爆发以来，围绕是否应当恪守中立，瑞士各界展开了激烈争论。此法案被否决后，德国、丹麦等国无法向乌克兰转运瑞士军火。```0
   ## 6/2/2023 - [台美贸易倡议签署协定 中国批美“掏空一中原则”](https://www.dw.com/zh/台美贸易倡议签署协定-中国批美-掏空一中原则/a-65803608?maca=chi-rss-chi-all-1127-rdf)
  ```无视中国的反对，美国周四与台湾正式签署“21世纪贸易倡议”首批协定，深化双边经贸合作关系。中国外交部指责美国的做法是“虚化掏空一个中国原则的最新例证”。```0
   ## 6/2/2023 - [香港抹去六四記憶 文物保存寄望海外](https://www.dw.com/zh/香港抹去六四記憶-文物保存寄望海外/a-65801167?maca=chi-rss-chi-all-1127-rdf)
@@ -67,12 +73,8 @@
  ```ChatGPT問世以來，人工智慧（AI）成為關注焦點，但一批全球頂尖科學家和企業領袖，近日卻要求正視人類文明可能毀滅的風險，其中包含ChatGPT母公司的執行長。他們的擔憂為何？東、西方對待AI發展的態度又有何不同？```0
   ## 5/30/2023 - [德语媒体：七国峰会打造抗中联盟](https://www.dw.com/zh/德语媒体：七国峰会打造抗中联盟/a-65773275?maca=chi-rss-chi-all-1127-rdf)
  ```前不久在广岛举行的七国峰会上，与会各国最为关心的一个议题，就是今后应如何同中国打交道。一个遏制中国日益增长影响力的全球联盟正在初具雏形。```0
-  ## 5/30/2023 - [印度考虑猛降光伏板进口税  产品9成来自中国](https://www.dw.com/zh/印度考虑猛降光伏板进口税-产品9成来自中国/a-65772670?maca=chi-rss-chi-all-1127-rdf)
- ```消息人士称，印度考虑将光伏板的进口税减半，并同时降低光伏产品的商品与服务税，以此弥补本地产能的不足，满足不断增长的对可再生能源的需求。去年，为抑制来自中国的进口，印度对光伏产品征收高达40%的关税。```0
   ## 5/30/2023 - [与美国“太空竞赛”：中国再有三名宇航员升空](https://www.dw.com/zh/与美国-太空竞赛-：中国再有三名宇航员升空/a-65770246?maca=chi-rss-chi-all-1127-rdf)
  ```中国成功运作着自己的空间站“天宫”，并与美国一样计划近些年内实现载人登月。周二，中国再次将三名宇航员送入太空，接替“天宫”现有宇航员。```0
-  ## 5/30/2023 - [經濟復甦緩慢 中國地攤重返街頭](https://www.dw.com/zh/經濟復甦緩慢-中國地攤重返街頭/a-65767207?maca=chi-rss-chi-all-1127-rdf)
- ```中國嚴重的失業問題正在衝擊全國，許多城市放寬了對於小販的管控，淄博燒烤更在網上火紅。這樣的地攤經濟學能夠挽救復甦乏力的經濟和青年失業嗎？```0
   ## 5/29/2023 - [日本核废水排海在即 原子能机构再赴福岛审查](https://www.dw.com/zh/日本核废水排海在即-原子能机构再赴福岛审查/a-65763766?maca=chi-rss-chi-all-1127-rdf)
  ```日本政府今年夏天启动将福岛核电厂污水排入海洋的计划，但当地渔民和邻国至今对此强烈反对。日本希望国际原子能机构能提供协助，确保排放过程符合安全标准。```0
   ## 5/29/2023 - [德语媒体：“去风险”本身就会造成风险](https://www.dw.com/zh/德语媒体：-去风险-本身就会造成风险/a-65763774?maca=chi-rss-chi-all-1127-rdf)
@@ -93,21 +95,11 @@
  ```中國脫口秀圈近日因「作風優良，能打勝仗」引起熱議，有網友戲稱，中國言論審查太苛刻，想搞脫口秀「要麼管住嘴，要麼邁開腿（潤至自由世界）」。脫口秀演員們如何看待不斷收緊的審查紅線？脫口秀在兩岸又有何差異？DW訪問了4位曾在兩岸演出的脫口秀演員，請他們將「脫口秀在中國」的包袱一一抖開。```0
   ## 5/25/2023 - [青年失业率居高不下 靠“孔乙己脱长衫”解决？](https://www.dw.com/zh/青年失业率居高不下-靠-孔乙己脱长衫-解决？/a-65732307?maca=chi-rss-chi-all-1127-rdf)
  ```为了防止年轻人陷入“毕业即失业”的困境，中国当局使出浑身解数，一面鼓励中小微企业招聘应届生，一面进行公务员和硕士扩招，同时展开舆论宣传攻势。此外，还有高校暗中用力，让数据“更好看”。```0
-  ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
- ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
   ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
  ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
-  ## 5/21/2023 - [研究：全球湖泊超过半数正在干涸](https://www.dw.com/zh/研究：全球湖泊超过半数正在干涸/a-65676698?maca=chi-rss-chi-all-1127-rdf)
- ```一项最新研究显示，全球变暖和人类消耗正在导致全球湖泊干涸。```0
-  ## 5/21/2023 - [世界气象组织警告：未来五年将创下最热记录](https://www.dw.com/zh/世界气象组织警告：未来五年将创下最热记录/a-65668526?maca=chi-rss-chi-all-1127-rdf)
- ```世界气象组织表示，厄尔尼诺和温室气体的综合影响将导致气温飙升，并警告说：“我们需要做好准备。”```0
+  ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
+ ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
   ## 5/20/2023 - [又一脱口秀演员在中国遭封杀](https://www.dw.com/zh/又一脱口秀演员在中国遭封杀/a-65684797?maca=chi-rss-chi-all-1127-rdf)
  ```脱口秀演员、六月四日、辱华。这是一周以来第二个中国全网封杀脱口秀演员事件的关键字。这次遭封杀的“罗杰叔叔”（UncleRoger）甚至不是中国人，也不是以政治讽刺起家。```0
   ## 5/18/2023 - [欧洲热门景点：中国游客仍未回归](https://www.dw.com/zh/欧洲热门景点：中国游客仍未回归/a-65668922?maca=chi-rss-chi-all-1127-rdf)
  ```曾经欧洲度假胜地满是中国游客的盛景不复，尽管新冠疫情已经结束，欧洲仍然鲜有中国游客。为什么中国人的欧洲出境游尚未恢复？这给巴黎这样的旅游城市带来怎样的影响？```0
-  ## 5/17/2023 - [约翰·塞巴斯蒂安·巴赫:A小调前奏曲与赋格](https://www.dw.com/zh/约翰·塞巴斯蒂安·巴赫-a小调前奏曲与赋格/a-65662186?maca=chi-rss-chi-all-1127-rdf)
- ```A小调前奏曲与赋格是巴赫非常早期的作品。巴赫擅长以赋格的形式创作，即在有限的主题的基础上进行变化。请听管风琴演奏家约翰内斯·朗的演奏。```0
-  ## 5/17/2023 - [备受瞩目的德累斯顿“绿穹”珍宝盗窃大案宣判](https://www.dw.com/zh/备受瞩目的德累斯顿-绿穹-珍宝盗窃大案宣判/a-65660444?maca=chi-rss-chi-all-1127-rdf)
- ```德国历史上最引人注目的文物盗窃案之一周二（5月16日）得以宣判，法院对柏林黑帮雷莫（Remmo）家族有组织犯罪团伙的五名成员作出了数项监禁判决。```0
-  ## 5/16/2023 - [再創亞洲第一 台灣通過同志無血緣共同收養](https://www.dw.com/zh/再創亞洲第一-台灣通過同志無血緣共同收養/a-65632519?maca=chi-rss-chi-all-1127-rdf)
- ```台灣在同婚法案4週年前夕，16日在立法院會三讀修正通過，讓同婚雙方當事人之一方收養他方的子女或共同收養時，準用民法關於收養的規定，破除原本的血緣限制。同志家庭收養的現況是什麼？```0
