--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,8 @@
 
+  ## 6/4/2023 - [泽伦斯基警告：战略反攻会有很多牺牲](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E6%B3%BD%E4%BC%A6%E6%96%AF%E5%9F%BA%E8%AD%A6%E5%91%8A-%E6%88%98%E7%95%A5%E5%8F%8D%E6%94%BB%E4%BC%9A%E6%9C%89%E5%BE%88%E5%A4%9A%E7%89%BA%E7%89%B2)
+ ```乌克兰总统泽连斯基说，乌克兰已准备好反攻，但有可能损失惨重。乌克兰抵抗俄罗斯侵略，面对强大的俄罗斯军队压倒性实力。泽伦斯基呼吁获得新的武器军援，否则，乌克兰的反攻将会有巨大的人员伤亡。```0
+  ## 6/4/2023 - [美国东亚和太平洋事务的助理国务卿急访中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E7%BE%8E%E5%9B%BD%E4%B8%9C%E4%BA%9A%E5%92%8C%E5%A4%AA%E5%B9%B3%E6%B4%8B%E4%BA%8B%E5%8A%A1%E7%9A%84%E5%8A%A9%E7%90%86%E5%9B%BD%E5%8A%A1%E5%8D%BF%E6%80%A5%E8%AE%BF%E4%B8%AD%E5%9B%BD)
+ ```美国国务院一名高级官员周日抵达北京，计划在未来两天与中国高层举行会议，力促恢复双方沟通渠道。路透社说，此举凸显美国寻求在两国关系紧张之际加强与中国的沟通。美国该高官六四日抵访中国，但美国官方称明天才开始正式访问。```0
   ## 6/4/2023 - [中国军舰台湾海峡对美国军舰过招 美方批危险行为](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E4%B8%AD%E5%9B%BD%E5%86%9B%E8%88%B0%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E5%AF%B9%E7%BE%8E%E5%9B%BD%E5%86%9B%E8%88%B0%E8%BF%87%E6%8B%9B-%E7%BE%8E%E6%96%B9%E6%89%B9%E5%8D%B1%E9%99%A9%E8%A1%8C%E4%B8%BA)
  ```美国与加拿大罕见派军舰结伴穿行台湾海峡。美国军方指控中国派遣军舰以之字形超越随行监控，称有撞船危险。中国军方报告全程监测，并谴责在台湾海峡闹事。```0
   ## 6/4/2023 - [港人在压迫下的「六四」悼念：狱中禁食丶香港主教的祈祷……](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E6%B8%AF%E4%BA%BA%E5%9C%A8%E5%8E%8B%E8%BF%AB%E4%B8%8B%E7%9A%84-%E5%85%AD%E5%9B%9B-%E6%82%BC%E5%BF%B5-%E7%8B%B1%E4%B8%AD%E7%A6%81%E9%A3%9F%E4%B8%B6%E9%A6%99%E6%B8%AF%E4%B8%BB%E6%95%99%E7%9A%84%E7%A5%88%E7%A5%B7)
@@ -55,7 +59,3 @@
  ```法国报纸周六头条关注新闻各不相同，《费加罗报》头版关注为控制公路超速，法国加大部署监控摄像头。来关于中国方面的消息，美国国务卿布林肯表示自俄乌爆发战争，美国不会被该此分心，会更加警惕中国。法国经济学家指出30年全球经济繁荣已成过去，气候问题或将引发粮食危机，而中国已经大量储存谷物。美国防长在香格里拉峰会呼吁与中国军方开发沟通渠道，多对话避免冲突。```0
   ## 6/3/2023 - [“六四”纪念馆曼哈顿开馆 与中国在当地总领事馆遥对](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B-%E7%BA%AA%E5%BF%B5%E9%A6%86%E6%9B%BC%E5%93%88%E9%A1%BF%E5%BC%80%E9%A6%86-%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%9C%A8%E5%BD%93%E5%9C%B0%E6%80%BB%E9%A2%86%E4%BA%8B%E9%A6%86%E9%81%A5%E5%AF%B9)
  ```1989年北京天安门“六四”运动的一些参加者和一些中国持不同政见者周五在纽约为世界上唯一的"纪念六四"博物馆揭幕，以纪念"中国人民的民主梦想"。开馆正值“六四”遭镇压34周年纪念两天前。```0
-  ## 6/3/2023 - [艾尔多安宣誓就职 北约秘书长到场祝贺敦促放行瑞典入盟](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E8%89%BE%E5%B0%94%E5%A4%9A%E5%AE%89%E5%AE%A3%E8%AA%93%E5%B0%B1%E8%81%8C-%E5%8C%97%E7%BA%A6%E7%A7%98%E4%B9%A6%E9%95%BF%E5%88%B0%E5%9C%BA%E7%A5%9D%E8%B4%BA%E6%95%A6%E4%BF%83%E6%94%BE%E8%A1%8C%E7%91%9E%E5%85%B8%E5%85%A5%E7%9B%9F)
- ```土耳其总统埃尔多安(TayyipErdogan)在今天举行的仪式上宣示就职。艾尔多安在上周末赢得连任随后将任命新政府内阁成员。```0
-  ## 6/3/2023 - [印尼提乌战停战计划即刻遭谴责](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E5%8D%B0%E5%B0%BC%E6%8F%90%E4%B9%8C%E6%88%98%E5%81%9C%E6%88%98%E8%AE%A1%E5%88%92%E5%8D%B3%E5%88%BB%E9%81%AD%E8%B0%B4%E8%B4%A3)
- ```印度尼西亚国防部长苏比安托今天在新加坡举行的香格里拉国防和安全会议上提出了一项结束俄罗斯和乌克兰之间战争的计划，提及冻结战场敌对，战区与被俄罗斯占领区由联合国监督公投等，此举立即受到多数与会者的谴责。```0
