--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [台湾政坛掀起#metoo 蓝绿政治人物、王丹都遭指控性骚](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/hcm-06042023050321.html)
+ ```台湾一名李姓网友在六四这天，于台北出面控诉89民运领袖王丹性骚扰，并要求王丹在台北时间6日午夜之前道歉否则将提告。王丹回应表示欢迎提告，支持以法律寻找真相。台湾近期从一名民进党前党工称遭性骚扰，在党内却无法获得正义开起，掀起一连串“#metoo”挺身揭发政坛性骚扰经历，蓝绿都有人被点名。李姓网友称，他是受到启发，才会在事发9年后挺身而出。李姓网友两天前先在个人脸书发文指控，9年前应王丹之邀前往美国，遭到王丹性骚。4日上午他在台北市议员林亮君陪同下，以公开露脸方式重述当时的经过。李姓网友称，2014年6月6日晚间，在纽约某饭店，遭王丹强吻，并“强暴未遂”。他说，接下来的几天中，王丹不时对他言语骚扰、有意无意暗示试图发生关系，因为在美国举目无亲，语言又不通，一周多的时间他担心受怕，最后提前返台。控诉网友拿对话截图为证对于有部分网友质疑，李姓网友提出他与王丹的对话截图指出，王丹在2014年5月30号台湾时间下午4点47分传讯息“在纽约等你”，称这是一个明确的邀约。他也公布几张王丹私人住所照片，与王丹直播比对，像是挂画、台灯等位置都完全吻合，证明他确实去过。由于前一天王丹以“没有性骚扰”以及“记忆落差”回应相关指控，李姓网友对王丹喊话称他手上有录音等相关证据，要求王丹道歉否则提告。“如果6月6号之前，没有在社群为过去行为，所欺负过或骚扰、甚至侵害过的人道歉，我会带着证据向检方提告。”“欢迎提告，支持用法律的方式寻找事情的真相。”王丹针对对方指控作上述回覆。六四前出面揭发动机为何？李姓网友揭发所谓的性骚内幕，时间正巧与六四纪念馆揭幕同一日。李姓网友主动说明，六四是世界民主非常重要的日子，但也是一个“污点”。他说，王丹当年曾站在坦克面前，为对抗中共强权打压人权发声。但现在他面对王丹，“就像那个站在坦克车面前的人”。“我很害怕，我觉得如果我一不小心，就可能会被你这台坦克打死，你比我有太多的权势。你有太多的光环，你的手甚至可以伸到政治或是学术圈。”李姓网友说道。李姓网友一度曾对两位前台北市议员投诉，但是，他说9年前当时身心状况不稳定，又担心被抹黑成“中国派来的打手”，所以作罢。如今受到近期好几位政治工作者揭发在职场遭受性骚以及不当对待的启发，给了他勇气站出来。连日遭指控王丹不愿揣测动机尊重网友判断除了李姓网友外，一名文字工作者也发文称，过去在台湾清华大学求学期间，也遭到王丹性骚扰。王丹3日推文回应，“为什么短短几天突然涌现这么多指控，我无意揣测。相信大家有自己的判断”。他说，不会一一回应，那会耗费大量精力和时间。他把判断交给网友。不管相信还是不相信，他都尊重。他也感谢选择相信他的朋友。王丹强调，不会因为这些风风雨雨，停止正在推动的工作，包括六四纪念馆，智库“对话中国”，针对中共大外宣的反认知作战，对未来中国转型方案的探讨，为国内异议人士出版著作等。“不仅不会停止，还会更加努力。”台湾政坛掀起#metoo风潮5月31日，一名民进党的前党工，以具名方式在脸书发了一封，“为时已晚但也该被好好接住的求救信”，揭发遭到一名与民进党友好的导演“辉哥”性骚扰，当她向当时民进党妇女部主任许嘉恬求助时，她却转身离开，遭到二度伤害。她引用近期政治夯剧《人选之人-造浪者》一句知名的台词，“我们不要就这样算了，好不好？很多事情不能就这样算了，如果这样的话，人就会慢慢地死掉，会死掉。”这篇贴文在台湾政坛炸锅，除了许嘉恬去职外，当时的民进党副秘书长林飞帆还为“忽略当事人不走申诉管道的背后原因”疏忽致歉。紧接着另名女党工指控遭到男同事性骚扰，向时任青年部主任蔡沐霖反映，还以影响部门气氛为由逼她道歉，此事还惊动高层。对于党内性骚连环爆，民进党现任主席赖清德多次向受害者和台湾社会道歉，他感谢受害者勇敢站出来，强调面对职场霸凌及性平事件，绝对不必要“大局为重”，人身安全及权利才是最重要的。民进党前主席、台湾总统蔡英文也在脸书发文，这两天，接连有受害者揭露，曾经在民进党遭受的性骚扰事件，得知他们的受害经历，感到很不舍和痛心。“身为前任党主席，责无旁贷。要向受害的朋友和社会大众，表达最深的歉意。”无独有偶，蓝营也有政治人物被点名卷入性骚事件，镜文学总经理董成瑜在脸书揭露，一名蓝营时任县长、现为立委的政治人物曾在餐叙上未经其同意抓她的手，甚至还突然站起来“抱住她的头亲她”。外界依照其描述推测为国民党立委傅崐萁，傅崐萁还发声明称，“若有任何性骚扰情事，请依法提出告诉”！国民党征召的总统参选人侯友宜发声明，呼吁党中央“绝不能轻忽此事”。台湾政坛的#metoo运动，在短短不到一周时间已经陆续传出逾十件，还有多少未爆弹，蓝绿都不敢轻忽。自由亚洲电台记者黄春梅台北报道责编陈美华许书婷```0
   ## 6/4/2023 - [天安门母亲：“永远不会忘记那个黑暗的夜晚”  网民发起六四静思节绝食一天](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06042023041129.html)
  ```八九“六四”34周年日，北京“天安门母亲”群体的多名成员在公安的监视下，到北京万安公墓纪念逝者。天安门母亲群体表示，作为亡者的亲属，他们永远不会忘记那个黑暗的夜晚。有网民发起六四静思节绝食一天的活动。周六晚，中国境内的微信、QQ等社交账号被禁止更换头像。本周日是北京六四34周年纪念日。当天天安门广场和周边戒备森严，军警和便衣三步一岗，禁止路人聚集、停留。警察还检查路人的身份证。上午，一位经过天安门广场的外省人李先生告诉本台：“我在北京，天安门周边全都是人脸识别的摄像头，你路过，就有警察在喊，前面的人拦截下来，要查身份证、登记，便衣特别多。只要你犯一点事就直接刑事拘留。”在微信、QQ等聊天工具上，今年的六四周年日未见到有人纪念六四死难者的白菊花、蜡烛。对此，李先生说：“往年纪念日都有，今年打压特别狠，现在你露头就抓。现在你要是在网上发表，就判你三年刑期。”六四事件已经过去了34年，但它仍然是中国历史上最具争议性和敏感性的事件之一。六四静思节网民自发绝食一天湖南网民田先生告诉本台，周六晚，国内网民的微信、QQ被禁止更换头像，当天仍有人以“六四静思节”绝食一天：“可能没有以往的纪念热度，但还是有的。今天是唐荆陵倡导的静思节，我们群里的人绝食一天，以示抗议。大部分人会记住这一天的。腾讯QQ、微信从昨天晚上起，不让你修改头像。”当天上午，北京“天安门母亲”群体发言人尤维洁、成员黄金平、袁刃、郝建、段昌琪等人，在北京警方的“护送”下，前往万安公墓祭奠他们在六四事件中失去的亲人。86岁高龄的张先玲近期因身体不适，未能到场。六四难属：永不会忘记那个黑暗的夜晚现场视频中，6位难属身穿黑色衣服，向逝者鞠躬默哀。六四遇难者杨燕声的妻子黄金平在致辞中说：“六四34周年过去了，在这个刻骨铭心的日子，我们都聚集在西郊的万安公墓祭奠我们在1989年6月4日惨遭屠杀遇难的亲人。。。。。”祭文写道：三十四年前的今天，当时的政府动用野战军使用机枪、坦克和装甲车，在首都长安街以及其他重要街道上，无视马路上众多的民众，横行霸道、真枪实弹地向人群开枪，用坦克碾压，残暴地镇压了学生和市民们。我们的亲人，他们就是在那个血腥的夜晚倒在罪恶的枪弹下，为了心中的理想献出了宝贵的生命。还称，作为亡者的亲属，我们永远不会忘记那个黑暗的夜晚，永远记得。1989年春天，北京天安门广场发生了大规模抗议活动，数以万计的学生和市民聚集在广场上要求政治改革和反对腐败。然而，在当局的镇压下，这次运动以悲惨结局告终。天安门母亲群体成员电话通讯被屏蔽本台当天致电天安门母亲代表尤维洁、张先玲等人，但始终无法接通。记者多次致电张先玲家的座机，但记者能听到对方说话，对方听不到记者到声音。张先玲的家人在电话中说：“喂。。。，境外的电话就别打了，现在是在监控状态，您的境外电话被掐断了，听不到您的声音。”此次活动引起了海内外媒体和民众关注。许多人认为，“天安门母亲”的坚强与勇气令人感动，并呼吁中国政府应该正视历史、追求真相，并给那些无辜死难者一个交代。6月4日，在全球各地都有人纪念这个重要时刻，美国、台湾及香港等地，有民间组织集会或个人通过绝食一天的活动，表达对那些失去生命或被捕入狱者的怀念，并呼吁中国政府重新审视此事。记者古亭责编陈美华许书婷```0
   ## 6/3/2023 - [中国大使馆前“六四大屠杀34周年纪念会” 年轻人为主](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy2-06032023190759.html)
@@ -27,5 +29,3 @@
  ```由1989年天安门学运领袖筹建的六四纪念馆即将于6月2日在纽约曼哈顿开馆。为此，纪念馆筹备团队在本周四召开揭幕记者会。多位六四学运领袖在会上谈及创立纪念馆的意义以及对中国民主运动的展望。 专栏：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 本周四，多位1989年天安门民主运动领袖在纽约曼哈顿召开了六四纪念馆揭幕记者会，王丹、周锋锁、当年的工人运动领袖吕京花等与会出席。王丹在会上表示，六四纪念馆会在纽约设立是因为香港当局在2021年关闭了在香港的六四纪念馆：“中国当局的意图很明显，他们想掩盖历史，让世界忘记中国当局犯的罪，他们希望大家忘记共产党是建立在暴力及谎言的政权。”王丹指出，透过六四纪念馆，让世人记住1989年的天安门民主运动是件相当重要的事：“1989年是中国近代历史最重要的转折点，比较1989年之前以及过后，会发现中国是两个完全不同的国家。……六四在中国至今依旧是很敏感的话题，它代表着政治反动，我们要维持这股反对力量，并为未来储备动力。纪念六四不仅是为了我们，也是为了中国；不只是为了过去，也是为了未来。”周锋锁：纪念馆展品很多来自六四参与者周锋锁也谈到，纪念馆象征着1989年民主运动世代以及“白纸运动”年轻世代对于民主中国的渴望：“我们抱有希望，不管我们如何被打败，也无论我们还要经过什么样的难关，民主中国的梦一直都存在。我们会团结在一起，就像34年前在天安门广场一样，全世界的人都看到我们对自由中国的梦想。”周锋锁指出，纪念馆中的文物很多是来自六四运动参与者的捐赠：“长期以来，我都在援助因为六四被关押的政治犯，很多人都因为1989年的民运被中国当局起诉，所以我们组建了信息联络网，这也是为何这些展品会到我这边。这些参与者希望这些展品能被展示、保存，同时他们也希望身份能被保护。”六四纪念馆馆长于大海向本台介绍馆藏文物（记者唐缘媛摄）现场众多年轻志愿者　王丹：大家都有自由中国梦在纪念馆的会场中，有众多年轻人参与筹备工作，当中不乏有仍打算回国的中国留学生。针对有关这些青年人是受到什么样的鼓舞，才愿意冒着被中国当局秋后算帐的风险前往纪念馆帮忙的问题，王丹解释道：“我们两代人分享着一样的价值观，我们都希望中国可以变民主。很多的年轻志愿者来自‘白纸运动’世代，但我们分享着同样的梦想，这就是为什么他们参与纪念馆的活动。”推特充斥六四纪念馆假帐号　王丹：面对网军已有所准备在六四纪念馆开幕前夕，社群平台推特上出现大量六四纪念馆的虚假帐号，并试图骗取支持者捐款。王丹就此接受本台记者采访表示，他们对于中国网军的攻击、威胁已有所准备，并没有特别忧心。王丹说：“被网军骚扰和在未来可能遇到一些麻烦，这都是预料之中的。这样的一个纪念馆显然会是中共及中共驻外使领馆的眼中钉、肉中刺，这个是完全可以理解的，但是我们也有做相应的准备。坦率讲，如果有人来捣乱的话，我敢保证他马上会被FBI（美国联邦调查局）发现。我们跟相关单位有做一定的准备，美国政府对此也是了解的。” 记者：唐缘媛   责编：何平   网编：洪伟```0
   ## 6/1/2023 - [又逢儿童节  中国流动人口子女状况惹关注](https://www.rfa.org/mandarin/yataibaodao/shehui/wy-06012023141816.html)
  ```今年6月1日是第73个国际儿童节。中国非政府组织"新公民计划"日前发布《2023中国流动人口子女现状》，揭示出当前中国流动人口子女的生存状况。由于父母在中国不同城市迁徙，这个庞大的未成年人群体正遭遇什么样的挑战？ 后浪：输在起跑线上的孩子"留守儿童"家庭现状：团聚少问题多 根据联合国《儿童权利公约》的定义，儿童是指18岁以下的人口。如果不看数字，常人似乎很难想象，中国流动人口的子女人数已经达到1.38亿，占了中国儿童总数的近一半（46%）。也就是说，两个中国儿童中，就有一个是流动人口的子女。“新公民计划”的最新报告《2023中国流动人口子女现状：事实和数据》对此作了详实的研究，数据来源包括国家统计局第七次全国人口普查、《2020年中国人口普查年鉴》及历次人口普查和调查数据中关于中国儿童人口的描述分析，以及中国国家统计局、联合国儿童基金会、联合国人口基金联合发布的《2020年中国儿童人口状况：事实与数据》等等。在一起！在一起？作为儿童，与父母生活在一起似乎是天经地义。但对于中国的流动人口子女来说，与父母在一起却常常是困难的。根据“新公民计划”的这份报告，2020年，有1.08亿儿童不能与父母双方共同居住在一起，其中8922万是受人口流动影响的儿童。他们中很多因此成为留守儿童，与在外地工作的父母相隔遥远。仅河南省就有留守儿童超过600万。与此同时，能随着父母一起迁徙的儿童只占流动人口子女总数的一半稍多（51.5%）。而在那些对于外来人口居住限制较多的城市，这种随迁率就更低。2020年，北京市流动人口子女的随迁率只有22.5%，上海也只有25%，广州为27.6%。还有部分流动人口的子女随着父母进城之后，因为各种原因与父母分离而返乡。2021年，中国全国就有92万进城务工随迁子女独自返乡，其中大部分成为留守儿童。北京郊区一所为农民工子女所开办的学校中的儿童（美联社资料图）不同的挑战对于留守儿童来说，他们的挑战是不能和父母在一起，在成长期缺失父母的亲情、指导和帮助。而随父母迁居异地的儿童也依然面临很多挑战。“新公民计划”2022年发布的《2022中国流动人口子女现状》曾着重分析了随迁子女就学的情况，显示其中80%能入读公办学校，20%入读民办学校。但这些随迁子女在异地入读公办学校时，常常会遭遇不公平待遇。身在纽约的非营利组织“劳工观察”创始人李强介绍说，中国随迁子女要入读本地公立学校，一般都要交一笔本地居民不必承担的赞助费，“你想想，打工的一对夫妻一年收入还不到10万元人民币，还需要加班加点，然后一个小孩上学就要赞助一、两万。”李强指出，中国针对流动人口子女歧视性的规定还体现在一些只有本地居民才能享有的财政补助上，“比如餐饮补助，和学校对低收入群体的补助，还有校车补助，有各种各样由财政支付、但外来工无法享有的补助。”目前身在荷兰的异议人士林生亮来自深圳。在这个外地务工人员大量聚集的城市，人脉甚广的林生亮常常会被人央求帮助办理外地工子女的入学资质，“我身边很多人都是这种情况，他们很痛苦。每年到孩子入学的时候，我就觉得他们像是人质被绑架一样，非常痛苦。”在林生亮看来，对于一般的外地务工人员，其子女入读公立学校的条件显得比较苛刻，“你要交社保，还要有租赁（租房）合同，你才能进公立学校读书，否则就读不了公立学校，要去私立学校就要收费，私立学校的师资等各方面条件又不够好。”深圳从至少十年前就开始实行“积分入学”的做法，对深圳户籍和符合深圳市就读条件的非深圳户籍儿童实行统一积分，根据申请儿童监护人的户籍、住房以及父母学历、职称高低等情况，进行打分排名，排名高的优先入学。这种做法似乎是为了冲破户籍与非户籍之间的屏障，但这种做法是否科学和公平，外界依然有不少质疑。据中国官媒人民网2013年报道，中国教育科学研究院研究员储朝晖认为，这种积分制实则是负向政策，在义务教育阶段对受教育对象进行分门别类的划分就是对受教育者权利的侵犯，从本质上说也是违法行为。林生亮则观察到，这种表面公平的积分制有很多猫腻，很多时候排名都是暗箱操作，积分排名不公布，这也是引发教育平权运动的原因之一，“后来很多人去搞教育平权，去搞示威游行，后来才把这种做法稍微公平一点点。”但这里的公平似乎并没有取得普遍的认可，人们仍然可以经常在社媒上看到对于流动人口子女无法得到公平教育权利的抱怨。中国非政府组织"新公民计划"日前发布《2023中国流动人口子女现状》中的中国流动人口规模图（新公民计划截图）工作也受歧视不仅上学得不到公平，这些外来务工人员的未成年子女想去工作也同样会遭到歧视。林生亮介绍说，在深圳，一半的工作没有歧视性的规定，但与政府有关联的企事业单位就会有地域性规定，比如网格员、学校的行政后勤人员、水电燃气公司等单位就只会招聘深圳本地户口的子女。李强则观察到，这种现象是全国性的，只是各地方程度不同，“比如保安类协助公务员工作的编制外工作，这种工作一般都要招收本地村镇人口的子女，外来工的子女要想找到这种工作都是很困难的。”林生亮说，无论是上学还是就业，这些针对外来务工人员子女的做法都显失公平，“纳税人人人平等，作为外来务工人员来到这座城市，作出了那么多贡献，他们也同样缴这个税。” 记者：王允   责编：何平  网编：洪伟```0
-  ## 6/1/2023 - [王丹出席民主峰会　希望德国议会关注中国人权个案](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ck-06012023100626.html)
- ```六四天安门34周年前夕，中国民运人士王丹受邀前往丹麦，参加哥本哈根民主高峰会。为期一周的欧洲行，王丹不但会见捷克总统帕维尔，针对中国问题交换看法外，也向德国自民党人权发言人海特提出，希望德国议会关注许志永等人权案件，并向中国施压。 海外华人连署许志永、丁家喜竞取诺贝尔和平奖专访丁家喜妻子罗胜春：中国政府在制造冤假错案郭飞雄被以"煽颠罪"重判　国际舆论呼吁放人海外民主人士推动许志永、丁家喜角逐诺贝尔和平奖联合国谴责中国重判许志永丁家喜　美国务院要求立即释放二人 非政府组织民主联盟基金会（AllianceofDemocracies）五月中举办第六届「哥本哈根民主高峰会」（CopenhagenDemocracySummit），除了台湾总统蔡英文透过视频在高峰会发表谈话，北约前秘书长、丹麦前总理拉斯穆森（AndersFoghRasmussen）也邀请中国民运人士，同时也是前六四学生领袖王丹与会。期间，王丹曾与捷克总统彼得·帕维尔（PetrPavel）针对中国问题交换看法。王丹：“比较核心的一点，他就提到现在欧洲国家在欧洲对华政策的制订上遇到一个问题，这个问题就是很多的欧洲国家是希望中国出来调停俄乌战争的，虽然他个人对此不是那么有信心，但必须正视这个现实。他问我怎么看，我说(中国)绝对不可能(调停)。“虽然捷克总统对中国持疑，然而王丹观察，更多欧洲政客或智库人员，选择相信中国，对习近平有所求，因此对华政策调整有限，但已经有进步。王丹：“这次我到欧洲，见到的国会议员和政要们，几乎很少听到要跟中国保持友好，最低都是保持竞争和警剔的态度。“王丹：“西方不该对中国人权灾难保持冷漠”而王丹也在德国针对人权问题，拜会德国自民党（FDP）人权发言人、国会议员彼得.海特（音译，PeterHeidt）。 前六四学运领袖王丹拜会德国自民党（FDP）人权发言人、国会议员彼得.海特（PeterHeidt）。（照片经王丹授权使用） 王丹：“我跟他们讲，发生的基本就是人权灾难，我觉得西方社会应该要有自己的人权坚持，不应该对这种人权灾难保持冷漠，我也特别列举几个案子，例如许志永、丁家喜的案子，例如说最近的案子，郭飞雄被重判的案子。““六四纪念馆”假帐号两天出现九个在结束欧洲行之际，王丹发现六四34周年前夕，开始有人针对当年的六四学运提出质疑。王丹：“我觉得事情过去34年，回头反思，有人会批評当初这些学生太激进，但我现在反思的结果，正好相反，我觉得当年的学生太理性。其实面对这样一个政权，我们当初犯的是跟现在西方政客一样的错误，就是以为对方是可以理性的，和平交谈的对象，但历史已经证明，根本就不是嘛，当年的学生那么的理性，结果换来的还是镇压。“另外，即将在美国曼哈顿开幕六四纪念馆，短短两天之内，居然在臉書、推特上出现九个假账号。 六四纪念馆将在今年六月四日开幕，近日却出现大量假帐号。（图/翻摄自王丹脸书照片经授权使用） 王丹：“这当然不可能是一般网民自发的行为，这显然是中共相关部门、情报部门、其它部门，专门组织集团性的破坏。”而这些假帐号不但意图混淆视听，王丹也担心中国网军试图用钓鱼的方式，钓出支持群众，不得不提防。 记者：郭宸绮  责编:嘉远  网编:何足```0
