--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [德防长会李尚福 2024将再向印太派船](https://www.dw.com/zh/德防长会李尚福-2024将再向印太派船/a-65819430?maca=chi-rss-chi-all-1127-rdf)
+ ```德国国防部长皮斯托里乌斯在香格里拉对话上表示，印太地区如果发生武装冲突，也会对欧洲和德国带来后果。他宣布，2024年将向该地区派出两艘舰只。此外，他还呼吁中国停止招募德国联邦军退役飞行员为中国提供培训。```0
   ## 6/4/2023 - [全球变暖会让巴拿马运河断航吗？](https://www.dw.com/zh/全球变暖会让巴拿马运河断航吗？/a-65770668?maca=chi-rss-chi-all-1127-rdf)
  ```要了解全球变暖的经济代价，只需看看巴拿马运河的状况。由于中美洲降雨减少，运河水位下降。专家担心普通消费者最终可能会为此付出代价。```0
   ## 6/4/2023 - [两座纳粹“跨步马”雕塑展出引发争议](https://www.dw.com/zh/两座纳粹-跨步马-雕塑展出引发争议/a-65771488?maca=chi-rss-chi-all-1127-rdf)
@@ -7,12 +9,12 @@
  ```去年全球低迷的股市，也令很多富豪的财富大幅缩水。百万富翁俱乐部的人数明显低于往年。```0
   ## 6/4/2023 - [谁在为全球反塑料污染公约制造障碍？](https://www.dw.com/zh/谁在为全球反塑料污染公约制造障碍？/a-65782004?maca=chi-rss-chi-all-1127-rdf)
  ```来自175个国家的代表聚集在巴黎联合国教科文组织总部密集谈判，期望达成一项应对塑料污染的全球条约。应该聚焦原生塑料还是再生塑料？环保组织担心谈判的方向走偏了。```0
+  ## 6/4/2023 - [无人机袭击俄罗斯的背后究竟是怎么回事？](https://www.dw.com/zh/无人机袭击俄罗斯的背后究竟是怎么回事？/a-65803958?maca=chi-rss-chi-all-1127-rdf)
+ ```俄罗斯对乌克兰的战争中出现新的形势：在俄罗斯领土上更经常地出现军事袭击。这背后是怎么一回事，西方又如何反应？```0
   ## 6/4/2023 - [日本出台新政策：每年投入3.5万亿日元“催生”](https://www.dw.com/zh/日本出台新政策：每年投入3-5万亿日元-催生/a-65807886?maca=chi-rss-chi-all-1127-rdf)
  ```日本政府宣布每年投入约3.5万亿日元“催生”。出生率下降趋势已对社会诸多方面造成严重影响。```0
   ## 6/4/2023 - [基因技术 - 粮食生产的持久发展之路](https://www.dw.com/zh/基因技术-粮食生产的持久发展之路/a-65808887?maca=chi-rss-chi-all-1127-rdf)
  ```围绕转基因食品，有着各种各样令人不安的传言。但事实上，随着转基因技术的不断提升，越来越多的专家都认为，持久性的粮食生产获得了重要和安全的方法。```0
-  ## 6/4/2023 - [无人机袭击俄罗斯的背后究竟是怎么回事？](https://www.dw.com/zh/无人机袭击俄罗斯的背后究竟是怎么回事？/a-65803958?maca=chi-rss-chi-all-1127-rdf)
- ```俄罗斯对乌克兰的战争中出现新的形势：在俄罗斯领土上更经常地出现军事袭击。这背后是怎么一回事，西方又如何反应？```0
   ## 6/4/2023 - [六四週年之際 王丹陷性騷風暴](https://www.dw.com/zh/六四週年之際-王丹陷性騷風暴/a-65818250?maca=chi-rss-chi-all-1127-rdf)
  ```中國六四學運領導人王丹日前遭一名台灣男子指控性騷擾，包含強吻與強暴未遂。指控者在六四34週年這天召開記者會，要求道歉否則提告。隨後，王丹回應：歡迎提告，支持用法律的方式尋找事情的真相。```0
   ## 6/4/2023 - [客座評論：台灣人為甚麼要知道六四？](https://www.dw.com/zh/客座評論：台灣人為甚麼要知道六四？/a-65818108?maca=chi-rss-chi-all-1127-rdf)
@@ -21,10 +23,10 @@
  ```“六四”34周年前夕，在地图应用程序百度地图、高德地图和腾讯地图上用在中国大陆普遍使用的简体中文搜索“四通桥”，将出现“未找到相关地点”的信息。此前一直挂在四通桥上写有桥名的路牌也被拆除。```0
   ## 6/3/2023 - [德语媒体：中国是否会摧毁德国工业？](https://www.dw.com/zh/德语媒体：中国是否会摧毁德国工业？/a-65816455?maca=chi-rss-chi-all-1127-rdf)
  ```《商报》担忧，中国凭借廉价大生产优势，将会威胁到德国产业的根基，德国政界必须尽快采取行动避免去工业化。《新苏黎世报》则刊发客席评论，指出尽管专制中国屡次打击民主运动，但是人类的自由的渴求永远不会被扼杀。```0
-  ## 6/3/2023 - [泽连斯基：乌克兰已做好反攻准备](https://www.dw.com/zh/泽连斯基：乌克兰已做好反攻准备/a-65816464?maca=chi-rss-chi-all-1127-rdf)
- ```乌克兰总统泽连斯基表示，目前已经为反攻战做好了准备，他还提到乌克兰需要更多爱国者导弹以抵御俄军的空袭。与此同时，在俄罗斯境内近日也出现多起空袭事件，但乌克兰方面否认与之有关。```0
   ## 6/3/2023 - [普京逮捕令：外交豁免权效力有多大？](https://www.dw.com/zh/普京逮捕令：外交豁免权效力有多大？/a-65816473?maca=chi-rss-chi-all-1127-rdf)
  ```南非即将于夏季举办金砖国家峰会，被国际刑事法院发布逮捕令的俄罗斯总统普京也受邀出席。身背逮捕令的普京如何与会？```0
+  ## 6/3/2023 - [泽连斯基：乌克兰已做好反攻准备](https://www.dw.com/zh/泽连斯基：乌克兰已做好反攻准备/a-65816464?maca=chi-rss-chi-all-1127-rdf)
+ ```乌克兰总统泽连斯基表示，目前已经为反攻战做好了准备，他还提到乌克兰需要更多爱国者导弹以抵御俄军的空袭。与此同时，在俄罗斯境内近日也出现多起空袭事件，但乌克兰方面否认与之有关。```0
   ## 6/3/2023 - [《5月35日》：香港「六四記憶」能移植台灣嗎？](https://www.dw.com/zh/《5月35日》：香港「六四記憶」能移植台灣嗎？/a-65816201?maca=chi-rss-chi-all-1127-rdf)
  ```香港六四紀念劇《5月35日》無法在港公演，今年首度移師台灣——這對香港人與台灣人來說有什麼意義？香港逐漸被「清洗」的六四記憶，能在台灣移植、落地嗎？DW採訪幕後團隊與學者理解他們的答案。```0
   ## 6/3/2023 - [美国中央情报局长秘密访问中国](https://www.dw.com/zh/美国中央情报局长秘密访问中国/a-65815540?maca=chi-rss-chi-all-1127-rdf)
@@ -43,8 +45,6 @@
  ```由八九民運領袖籌辦的六四紀念館，正式在美國紐約開幕，展出34年前六四事件的歷史物品。香港曾經作為支援中國民運的集中地，今天也成為展館的一個特別元素。```0
   ## 6/2/2023 - [约翰·塞巴斯蒂安·巴赫:D小调托卡塔](https://www.dw.com/zh/约翰·塞巴斯蒂安·巴赫-d小调托卡塔/a-65809848?maca=chi-rss-chi-all-1127-rdf)
  ```D小调托卡塔是家约翰·塞巴斯蒂安·巴赫最脍炙人口的管风琴作品之一，热情奔放、气势宏大。```0
-  ## 6/2/2023 - [德国向右转？选项党与社民党的支持率齐平](https://www.dw.com/zh/德国向右转？选项党与社民党的支持率齐平/a-65809300?maca=chi-rss-chi-all-1127-rdf)
- ```如果下周日举行联邦议院选举，德国右翼的选项党将获得18%的席位，与社民党相当。为什么会这样呢？```0
   ## 6/2/2023 - [德语媒体:供应链法让欧企将市场让与中国](https://www.dw.com/zh/德语媒体-供应链法让欧企将市场让与中国/a-65807774?maca=chi-rss-chi-all-1127-rdf)
  ```《商报》刊发评论指出，中国经济疲软也将让依赖对华出口的德国企业蒙受损失。《法兰克福汇报》则担心，旨在让欧洲企业为境外供应链承担社会与环境责任的欧盟供应链法案，很可能会导致欧洲人将市场拱手让给努力拓展经济影响力的中国。```0
   ## 6/2/2023 - [RCEP对15个签署国全面生效](https://www.dw.com/zh/rcep对15个签署国全面生效/a-65804548?maca=chi-rss-chi-all-1127-rdf)
