--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,14 @@
 
+  ## 6/4/2023 - [或再组访问乌欧 李辉强调反对向乌战军援武器](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E6%88%96%E5%86%8D%E7%BB%84%E8%AE%BF%E9%97%AE%E4%B9%8C%E6%AC%A7-%E6%9D%8E%E8%BE%89%E5%BC%BA%E8%B0%83%E5%8F%8D%E5%AF%B9%E5%90%91%E4%B9%8C%E6%88%98%E5%86%9B%E6%8F%B4%E6%AD%A6%E5%99%A8)
+ ```乌克兰反攻话题甚嚣尘上。中国乌克兰问题特使在结束欧洲之行返回北京时表示，从目前的情况来看，一些困难阻碍了俄罗斯和乌克兰启动和平谈判。中国将继续执行调解任务，并向乌克兰派出其他特派团。李辉强调西方国家军援乌克兰，增加乌战死伤流血，他并呼吁停止军援战场。```0
+  ## 6/4/2023 - [香格里拉对话会 李尚福不点名批亚太“北约化”  美方谴责中国军舰“危险靠近”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E9%A6%99%E6%A0%BC%E9%87%8C%E6%8B%89%E5%AF%B9%E8%AF%9D%E4%BC%9A-%E6%9D%8E%E5%B0%9A%E7%A6%8F%E4%B8%8D%E7%82%B9%E5%90%8D%E6%89%B9%E4%BA%9A%E5%A4%AA-%E5%8C%97%E7%BA%A6%E5%8C%96-%E7%BE%8E%E6%96%B9%E8%B0%B4%E8%B4%A3%E4%B8%AD%E5%9B%BD%E5%86%9B%E8%88%B0-%E5%8D%B1%E9%99%A9%E9%9D%A0%E8%BF%91)
+ ```中国防长李尚福周日6月4日在新加坡举行的香格里拉对话会上不点名批评让亚太“北约化”，美国军方谴责6月3一艘中国军舰“危险靠近”在台湾海峡航行的美国驱逐舰。```0
+  ## 6/4/2023 - [因应南海紧张 德国称明年加派2军舰至印太](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E5%9B%A0%E5%BA%94%E5%8D%97%E6%B5%B7%E7%B4%A7%E5%BC%A0-%E5%BE%B7%E5%9B%BD%E7%A7%B0%E6%98%8E%E5%B9%B4%E5%8A%A0%E6%B4%BE2%E5%86%9B%E8%88%B0%E8%87%B3%E5%8D%B0%E5%A4%AA)
+ ```有鉴于目前中国与台湾之间的紧张局势不断升级，围绕有争议的南中国海问题致使南海局势有加剧趋势，德国国防部长皮斯托瑞斯周日表示，德国将在2024年向印太地区派遣两艘战舰。```0
+  ## 6/4/2023 - [香格里拉：世界间谍首脑乘时举行秘密会议](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230604-%E9%A6%99%E6%A0%BC%E9%87%8C%E6%8B%89-%E4%B8%96%E7%95%8C%E9%97%B4%E8%B0%8D%E9%A6%96%E8%84%91%E4%B9%98%E6%97%B6%E4%B8%BE%E8%A1%8C%E7%A7%98%E5%AF%86%E4%BC%9A%E8%AE%AE)
+ ```新加坡举办的香格里拉亚洲安全与防卫论坛年会同时，来自世界上大约20多个国家的主要情报机构高级官员本周末在安全会议的会外举行了一次秘密会议。```0
+  ## 6/4/2023 - [塞尔维亚民众抗议武契奇示威扩大](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E5%A1%9E%E5%B0%94%E7%BB%B4%E4%BA%9A%E6%B0%91%E4%BC%97%E6%8A%97%E8%AE%AE%E6%AD%A6%E5%A5%91%E5%A5%87%E7%A4%BA%E5%A8%81%E6%89%A9%E5%A4%A7)
+ ```塞尔维亚民众反对暴力和武契奇政权的运动正在扩大势头。这是塞尔维亚第五次反对暴力和武契奇总统政权的示威，一个月前，两起枪击案造成18人死亡，受害者一半是儿童，并有20人受伤。对示威者来说，亲政权的媒体所助长的暴力气氛是导致社会紧张的原因之一。```0
   ## 6/4/2023 - [泽伦斯基警告：战略反攻会有很多牺牲](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E6%B3%BD%E4%BC%A6%E6%96%AF%E5%9F%BA%E8%AD%A6%E5%91%8A-%E6%88%98%E7%95%A5%E5%8F%8D%E6%94%BB%E4%BC%9A%E6%9C%89%E5%BE%88%E5%A4%9A%E7%89%BA%E7%89%B2)
  ```乌克兰总统泽连斯基说，乌克兰已准备好反攻，但有可能损失惨重。乌克兰抵抗俄罗斯侵略，面对强大的俄罗斯军队压倒性实力。泽伦斯基呼吁获得新的武器军援，否则，乌克兰的反攻将会有巨大的人员伤亡。```0
   ## 6/4/2023 - [美国东亚和太平洋事务的助理国务卿急访中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E7%BE%8E%E5%9B%BD%E4%B8%9C%E4%BA%9A%E5%92%8C%E5%A4%AA%E5%B9%B3%E6%B4%8B%E4%BA%8B%E5%8A%A1%E7%9A%84%E5%8A%A9%E7%90%86%E5%9B%BD%E5%8A%A1%E5%8D%BF%E6%80%A5%E8%AE%BF%E4%B8%AD%E5%9B%BD)
@@ -49,13 +59,3 @@
  ```在天安门六四运动34周年前夕，中国首都警察星期六尽早出现在北京四通桥周围，去年11月底在那里发生了罕见的敌视政权的示威。```0
   ## 6/3/2023 - [美国与加拿大军舰联合穿越台湾海峡](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E4%B8%8E%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%86%9B%E8%88%B0%E8%81%94%E5%90%88%E7%A9%BF%E8%B6%8A%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1)
  ```据美国海军告示，一艘美国军舰和一艘加拿大军舰周六航行通过台湾海峡。路透社说，北京和华盛顿紧张局势加剧之际，美国与加拿大海军罕见在敏感水道联合执行任务。```0
-  ## 6/3/2023 - [泽连斯基称乌军已准备好大反攻：我们坚信我们将取得成功](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%E4%B9%8C%E5%86%9B%E5%87%86%E5%A4%87%E5%A4%A7%E5%8F%8D%E6%94%BB)
- ```乌克兰总统泽连斯基（VolodymyrZelensky）在周六发表的采访中表示，乌克兰准备发动期待已久的反攻，以夺回被俄罗斯占领的领土。```0
-  ## 6/3/2023 - [德媒爆料仍有德国前飞行员在中国训练战机驾驶挣大钱](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%BE%B7%E5%AA%92%E7%88%86%E6%96%99%E4%BB%8D%E6%9C%89%E5%BE%B7%E5%9B%BD%E5%89%8D%E9%A3%9E%E8%A1%8C%E5%91%98%E5%9C%A8%E4%B8%AD%E5%9B%BD%E8%AE%AD%E7%BB%83%E6%88%98%E6%9C%BA%E9%A9%BE%E9%A9%B6%E6%8C%A3%E5%A4%A7%E9%92%B1)
- ```少数前德国飞行员现在可能仍然在中国提供军事训练，并为他们的教练工作赚取巨额薪水。他们的活动对德国安全官员提出了敏感问题。揭露此事件的德国镜报称此事是可疑活动。```0
-  ## 6/3/2023 - [日美韩三国防长在新加坡举行会谈](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E6%97%A5%E7%BE%8E%E9%9F%A9%E4%B8%89%E5%9B%BD%E9%98%B2%E9%95%BF%E5%9C%A8%E6%96%B0%E5%8A%A0%E5%9D%A1%E4%B8%BE%E8%A1%8C%E4%BC%9A%E8%B0%88)
- ```正在新加坡出席亚洲安全会议（香格里拉对话）的日本、美国、韩国防长6月3日在新加坡举行会谈。日本防卫大臣滨田靖一、美国国防部长奥斯汀、韩国国防部长李钟燮参加了会谈，此外，日本防卫大臣滨田靖一也与中国国防部长李尚福举行会谈。```0
-  ## 6/3/2023 - [美国更加警惕中国威胁](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20230603-%E7%BE%8E%E5%9B%BD%E6%9B%B4%E5%8A%A0%E8%AD%A6%E6%83%95%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81)
- ```法国报纸周六头条关注新闻各不相同，《费加罗报》头版关注为控制公路超速，法国加大部署监控摄像头。来关于中国方面的消息，美国国务卿布林肯表示自俄乌爆发战争，美国不会被该此分心，会更加警惕中国。法国经济学家指出30年全球经济繁荣已成过去，气候问题或将引发粮食危机，而中国已经大量储存谷物。美国防长在香格里拉峰会呼吁与中国军方开发沟通渠道，多对话避免冲突。```0
-  ## 6/3/2023 - [“六四”纪念馆曼哈顿开馆 与中国在当地总领事馆遥对](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B-%E7%BA%AA%E5%BF%B5%E9%A6%86%E6%9B%BC%E5%93%88%E9%A1%BF%E5%BC%80%E9%A6%86-%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%9C%A8%E5%BD%93%E5%9C%B0%E6%80%BB%E9%A2%86%E4%BA%8B%E9%A6%86%E9%81%A5%E5%AF%B9)
- ```1989年北京天安门“六四”运动的一些参加者和一些中国持不同政见者周五在纽约为世界上唯一的"纪念六四"博物馆揭幕，以纪念"中国人民的民主梦想"。开馆正值“六四”遭镇压34周年纪念两天前。```0
