--- a/新闻/英国广播公司.md
+++ b/新闻/英国广播公司.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [印度列车事故：为什么该国的火车时常脱轨？](https://www.bbc.com/zhongwen/simp/world-65801957?at_medium=RSS&at_campaign=KARANGA)
+ ```关于这起致命意外的确切原因，还有很多问题有待解答。```0
   ## 6/3/2023 - [香格里拉对话会2023：中美防长握手但无“实质性交流”，美国吁北京参与对话](https://www.bbc.com/zhongwen/simp/chinese-news-65796804?at_medium=RSS&at_campaign=KARANGA)
  ```美国国防部长奥斯汀在新加坡出席香格里拉亚洲安全峰会时表示，对中国不愿参与军事危机管理“深表关切”。澳洲总理阿尔巴尼斯则呼吁美中应加强交流和建设“护栏”。```0
   ## 6/3/2023 - [“武统台湾”民调、清真寺遭强拆、北约“东进”和本周更多重要故事](https://www.bbc.com/zhongwen/simp/press-review-65786824?at_medium=RSS&at_campaign=KARANGA)
