--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [前中国驻美大使：美国必须停止在中国家门口的军事部署](https://www.voachinese.com/a/former-chinese-ambassador-says-us-must-halt-military-deployments-near-china-20230604/7122158.html)
+ ```一位退休的中国资深外交官周日在新加坡表示，如果要恢复两个超级大国之间的高层防务谈判，美国应该本着“诚意”减少靠近中国的军事部署。```0
   ## 6/4/2023 - [六四34周年，部分难属前往北京万安公墓祭奠34年前惨遭军队杀害的亲人。
 
 ](https://www.voachinese.com/a/families-of-tiananmen-massacre-marked-anniversary-at-their-lost-loved-ones-tombstones-20230604/7122172.html)
@@ -44,5 +46,3 @@
  ```自2020年6月加勒万河谷的流血冲突之后，中印边界争端已持续近三年，且仍无大规模撤军的迹象。两国近日更是互相驱逐记者，进一步限缩沟通渠道。军事专家认为，尽管短期内未必会爆发大规模冲突，中印多轮高层谈判有名无实并且在敏感地带不断强化军事存在，提升了擦枪走火的风险，阻滞双边关系正常化轨迹。```0
   ## 6/3/2023 - [中俄无视美国在联合国谴责朝鲜发射卫星的呼吁](https://www.voachinese.com/a/china-and-russia-ignore-us-call-at-un-to-condemn-north-korea-launch-20230602/7121345.html)
  ```中国和俄罗斯周五（6月2日）无视美国呼吁联合国安理会团结起来，共同谴责朝鲜本周试图发射卫星，反而指责华盛顿加剧了朝鲜半岛的紧张局势。```0
-  ## 6/3/2023 - [拜登在白宫椭圆形办公室就避免债务违约发表讲话，强调两党妥协与共识](https://www.voachinese.com/a/biden-highlights-compromise-in-oval-office-remarks-on-us-avoiding-default-20230602/7121372.html)
- ```在进行了几个星期的艰难谈判后，美国总统乔·拜登星期五(6月2日)晚间就《财政责任法案》的通过发表讲话，强调了他与共和党人达成两党共识的能力。在拜登2024年竞选连任期间，这肯定将会是他再度凸显的一个主题```0
