--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [中国：中美激烈冲突对抗是“世界不可承受之痛”](https://www.dw.com/zh/中国：中美激烈冲突对抗是-世界不可承受之痛/a-65819515?maca=chi-rss-chi-all-1127-rdf)
+ ```中国国防部长李尚福在香格里拉对话上表示，如果中美发生激烈冲突对抗，将是世界不可承受之痛，相互尊重、和平共处、合作共赢才是中美相处之道。但他强调，在台湾问题上，中国不会容忍任何挑衅行为。```0
   ## 6/4/2023 - [德防长会李尚福 2024将再向印太派船](https://www.dw.com/zh/德防长会李尚福-2024将再向印太派船/a-65819430?maca=chi-rss-chi-all-1127-rdf)
  ```德国国防部长皮斯托里乌斯在香格里拉对话上表示，印太地区如果发生武装冲突，也会对欧洲和德国带来后果。他宣布，2024年将向该地区派出两艘舰只。此外，他还呼吁中国停止招募德国联邦军退役飞行员为中国提供培训。```0
   ## 6/4/2023 - [全球变暖会让巴拿马运河断航吗？](https://www.dw.com/zh/全球变暖会让巴拿马运河断航吗？/a-65770668?maca=chi-rss-chi-all-1127-rdf)
