--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,6 +1,14 @@
 
+  ## 6/4/2023 - [纪念六四 让中国进入自由文明进程](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20230604-%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B-%E8%AE%A9%E4%B8%AD%E5%9B%BD%E8%BF%9B%E5%85%A5%E8%87%AA%E7%94%B1%E6%96%87%E6%98%8E%E8%BF%9B%E7%A8%8B)
+ ```2021年在香港的六四纪念馆被关闭后，今年2023年6月2日六四纪念馆在纽约开幕，来纪念六四天安门事件34周年，体现人们对自由和民主的渴望和追求。另外全球华人社群在周日6月4日纪念天安门事件，许多海外中国人都参加世界各地举办的活动，请听法广专访李恒青先生，认为中国要进入自由文明进程，而且个人自由选择权利不可剥夺。```0
+  ## 6/4/2023 - [专家：无人机已成乌克兰战争中的主角](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230604-%E4%B8%93%E5%AE%B6-%E6%97%A0%E4%BA%BA%E6%9C%BA%E5%B7%B2%E6%88%90%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E4%B8%AD%E7%9A%84%E4%B8%BB%E8%A7%92)
+ ```在乌克兰战争中，无人机已经无处不在。法国军事专家认为，以前从未有一场冲突汇集了如此多这种正颠覆着军事战术的机器，无人机显然已经成为乌克兰战争中的主角。```0
+  ## 6/4/2023 - [六四34周年：路透社回顾是夜前后一二三](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E8%B7%AF%E9%80%8F%E7%A4%BE%E5%9B%9E%E9%A1%BE%E6%98%AF%E5%A4%9C%E5%89%8D%E5%90%8E%E4%B8%80%E4%BA%8C%E4%B8%89)
+ ```今天周日是中国当局血腥镇压北京天安门广场及其周围街区民主示威活动34周年，当时中国军队向自己的人民开火。路透社引用该新闻社资料以及中国官方媒体信息回顾六四是夜与是日前后场景。```0
   ## 6/4/2023 - [或再组访问乌欧 李辉强调反对向乌战军援武器](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E6%88%96%E5%86%8D%E7%BB%84%E8%AE%BF%E9%97%AE%E4%B9%8C%E6%AC%A7-%E6%9D%8E%E8%BE%89%E5%BC%BA%E8%B0%83%E5%8F%8D%E5%AF%B9%E5%90%91%E4%B9%8C%E6%88%98%E5%86%9B%E6%8F%B4%E6%AD%A6%E5%99%A8)
  ```乌克兰反攻话题甚嚣尘上。中国乌克兰问题特使在结束欧洲之行返回北京时表示，从目前的情况来看，一些困难阻碍了俄罗斯和乌克兰启动和平谈判。中国将继续执行调解任务，并向乌克兰派出其他特派团。李辉强调西方国家军援乌克兰，增加乌战死伤流血，他并呼吁停止军援战场。```0
+  ## 6/4/2023 - [日本防卫大臣在新加坡与中国防长等举行会谈](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230604-%E6%97%A5%E6%9C%AC%E9%98%B2%E5%8D%AB%E5%A4%A7%E8%87%A3%E5%9C%A8%E6%96%B0%E5%8A%A0%E5%9D%A1%E4%B8%8E%E4%B8%AD%E5%9B%BD%E9%98%B2%E9%95%BF%E7%AD%89%E4%B8%BE%E8%A1%8C%E4%BC%9A%E8%B0%88)
+ ```日本防卫大臣滨田靖一日本时间3日下午在新加坡与中国国务委员兼国防部长李尚福举行会谈，这是两人第一次举行面对面会谈，滨田靖一还与乌克兰、韩国防长等举行了会谈。```0
   ## 6/4/2023 - [香格里拉对话会 李尚福不点名批亚太“北约化”  美方谴责中国军舰“危险靠近”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E9%A6%99%E6%A0%BC%E9%87%8C%E6%8B%89%E5%AF%B9%E8%AF%9D%E4%BC%9A-%E6%9D%8E%E5%B0%9A%E7%A6%8F%E4%B8%8D%E7%82%B9%E5%90%8D%E6%89%B9%E4%BA%9A%E5%A4%AA-%E5%8C%97%E7%BA%A6%E5%8C%96-%E7%BE%8E%E6%96%B9%E8%B0%B4%E8%B4%A3%E4%B8%AD%E5%9B%BD%E5%86%9B%E8%88%B0-%E5%8D%B1%E9%99%A9%E9%9D%A0%E8%BF%91)
  ```中国防长李尚福周日6月4日在新加坡举行的香格里拉对话会上不点名批评让亚太“北约化”，美国军方谴责6月3一艘中国军舰“危险靠近”在台湾海峡航行的美国驱逐舰。```0
   ## 6/4/2023 - [因应南海紧张 德国称明年加派2军舰至印太](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E5%9B%A0%E5%BA%94%E5%8D%97%E6%B5%B7%E7%B4%A7%E5%BC%A0-%E5%BE%B7%E5%9B%BD%E7%A7%B0%E6%98%8E%E5%B9%B4%E5%8A%A0%E6%B4%BE2%E5%86%9B%E8%88%B0%E8%87%B3%E5%8D%B0%E5%A4%AA)
@@ -51,11 +59,3 @@
  ```美国周六宣布，美国负责东南亚事务的副国务卿丹尼尔-克里登布林克将在未来几天内对中国进行罕见的访问。法新社说，美国显示寻求使两国关系升温。```0
   ## 6/3/2023 - [德国前军机飞行员在中国训练战机：德国防长立马在香格里拉质问中国防长李尚福](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E5%BE%B7%E5%9B%BD%E5%89%8D%E5%86%9B%E6%9C%BA%E9%A3%9E%E8%A1%8C%E5%91%98%E5%9C%A8%E4%B8%AD%E5%9B%BD%E8%AE%AD%E7%BB%83%E6%88%98%E6%9C%BA-%E5%BE%B7%E5%9B%BD%E9%98%B2%E9%95%BF%E7%AB%8B%E9%A9%AC%E5%9C%A8%E9%A6%99%E6%A0%BC%E9%87%8C%E6%8B%89%E8%B4%A8%E9%97%AE%E4%B8%AD%E5%9B%BD%E9%98%B2%E9%95%BF%E6%9D%8E%E5%B0%9A%E7%A6%8F)
  ```德国《明镜》周刊昨天揭露仍然有德国退役尖端空军士兵在中国训练战斗机飞行员，该爆料在德国正在掀起波澜。德国防长参加在新加坡举行的香格里拉安全与防卫对话论坛，立即在与中国国防部长李尚福会面时，德国国防部长皮斯托瑞斯相当不客气地要求中国结束聘用德国退役飞行员训练中国战机飞行员。中国防长李尚福低调，但指德国防长夸大事情了。```0
-  ## 6/3/2023 - [禁止纪念六四 香港警方今逮4人](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%A6%81%E6%AD%A2%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B-%E9%A6%99%E6%B8%AF%E8%AD%A6%E6%96%B9%E4%BB%8A%E9%80%AE4%E4%BA%BA)
- ```在天安门运动34周年前夕，香港警方在街头逮捕了至少两名艺术家和另外两名人士。```0
-  ## 6/3/2023 - [针对朝鲜发射导弹 日本启用冲绳PAC-3也警惕中国](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230603-%E9%92%88%E5%AF%B9%E6%9C%9D%E9%B2%9C%E5%8F%91%E5%B0%84%E5%AF%BC%E5%BC%B9-%E6%97%A5%E6%9C%AC%E5%90%AF%E7%94%A8%E5%86%B2%E7%BB%B3pac-3%E4%B9%9F%E8%AD%A6%E6%83%95%E4%B8%AD%E5%9B%BD)
- ```为防备朝鲜发射“军事侦察卫星”，日本防卫省从约一个月前向冲绳县的宫古、石垣、与那国三岛运进了自卫队地对空拦截导弹“爱国者3”（PAC-3）。虽然这是为了应对零部件掉落等“万一事态”，但自卫队内部倾向于并未设想会发展到实际上击落的事态。有观点称，这是考虑到与台湾突发事态有关的中国大陆而进行的部队活动“预演”。```0
-  ## 6/3/2023 - [六四届临 北京看紧四通桥](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B%E5%B1%8A%E4%B8%B4-%E5%8C%97%E4%BA%AC%E7%9C%8B%E7%B4%A7%E5%9B%9B%E9%80%9A%E6%A1%A5)
- ```在天安门六四运动34周年前夕，中国首都警察星期六尽早出现在北京四通桥周围，去年11月底在那里发生了罕见的敌视政权的示威。```0
-  ## 6/3/2023 - [美国与加拿大军舰联合穿越台湾海峡](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E4%B8%8E%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%86%9B%E8%88%B0%E8%81%94%E5%90%88%E7%A9%BF%E8%B6%8A%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1)
- ```据美国海军告示，一艘美国军舰和一艘加拿大军舰周六航行通过台湾海峡。路透社说，北京和华盛顿紧张局势加剧之际，美国与加拿大海军罕见在敏感水道联合执行任务。```0
