--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,8 @@
 
+  ## 6/4/2023 - [欧洲在华使团无惧禁制纪念“六四”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E6%AC%A7%E6%B4%B2%E5%9C%A8%E5%8D%8E%E4%BD%BF%E5%9B%A2%E6%97%A0%E6%83%A7%E7%A6%81%E5%88%B6%E7%BA%AA%E5%BF%B5-%E5%85%AD%E5%9B%9B)
+ ```今天是六四事件34周年，中国官方在实体及网络上大力维稳。但德国、英国及欧盟驻中国使团今天透过微博接力声援六四，但不是被删文就是被删留言。其中，德国使馆率先上传一部黑暗中点燃蜡烛又熄灭的短片，令不少中国网友惊呼。```0
+  ## 6/4/2023 - [中国神舟15着陆 3宇航员返回地面](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E4%B8%AD%E5%9B%BD%E7%A5%9E%E8%88%9F15%E7%9D%80%E9%99%86-3%E5%AE%87%E8%88%AA%E5%91%98%E8%BF%94%E5%9B%9E%E5%9C%B0%E9%9D%A2)
+ ```中国官方媒体今天称，三名中国宇航员在中国空间站上执行任务后已经安全返回地球，这次任务被称是"完全成功"。```0
   ## 6/4/2023 - [纪念六四 让中国进入自由文明进程](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20230604-%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B-%E8%AE%A9%E4%B8%AD%E5%9B%BD%E8%BF%9B%E5%85%A5%E8%87%AA%E7%94%B1%E6%96%87%E6%98%8E%E8%BF%9B%E7%A8%8B)
  ```2021年在香港的六四纪念馆被关闭后，今年2023年6月2日六四纪念馆在纽约开幕，来纪念六四天安门事件34周年，体现人们对自由和民主的渴望和追求。另外全球华人社群在周日6月4日纪念天安门事件，许多海外中国人都参加世界各地举办的活动，请听法广专访李恒青先生，认为中国要进入自由文明进程，而且个人自由选择权利不可剥夺。```0
   ## 6/4/2023 - [专家：无人机已成乌克兰战争中的主角](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230604-%E4%B8%93%E5%AE%B6-%E6%97%A0%E4%BA%BA%E6%9C%BA%E5%B7%B2%E6%88%90%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E4%B8%AD%E7%9A%84%E4%B8%BB%E8%A7%92)
@@ -17,7 +21,7 @@
  ```新加坡举办的香格里拉亚洲安全与防卫论坛年会同时，来自世界上大约20多个国家的主要情报机构高级官员本周末在安全会议的会外举行了一次秘密会议。```0
   ## 6/4/2023 - [塞尔维亚民众抗议武契奇示威扩大](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E5%A1%9E%E5%B0%94%E7%BB%B4%E4%BA%9A%E6%B0%91%E4%BC%97%E6%8A%97%E8%AE%AE%E6%AD%A6%E5%A5%91%E5%A5%87%E7%A4%BA%E5%A8%81%E6%89%A9%E5%A4%A7)
  ```塞尔维亚民众反对暴力和武契奇政权的运动正在扩大势头。这是塞尔维亚第五次反对暴力和武契奇总统政权的示威，一个月前，两起枪击案造成18人死亡，受害者一半是儿童，并有20人受伤。对示威者来说，亲政权的媒体所助长的暴力气氛是导致社会紧张的原因之一。```0
-  ## 6/4/2023 - [泽伦斯基警告：战略反攻会有很多牺牲](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E6%B3%BD%E4%BC%A6%E6%96%AF%E5%9F%BA%E8%AD%A6%E5%91%8A-%E6%88%98%E7%95%A5%E5%8F%8D%E6%94%BB%E4%BC%9A%E6%9C%89%E5%BE%88%E5%A4%9A%E7%89%BA%E7%89%B2)
+  ## 6/4/2023 - [泽连斯基警告：战略反攻会有很多牺牲](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E6%B3%BD%E4%BC%A6%E6%96%AF%E5%9F%BA%E8%AD%A6%E5%91%8A-%E6%88%98%E7%95%A5%E5%8F%8D%E6%94%BB%E4%BC%9A%E6%9C%89%E5%BE%88%E5%A4%9A%E7%89%BA%E7%89%B2)
  ```乌克兰总统泽连斯基说，乌克兰已准备好反攻，但有可能损失惨重。乌克兰抵抗俄罗斯侵略，面对强大的俄罗斯军队压倒性实力。泽伦斯基呼吁获得新的武器军援，否则，乌克兰的反攻将会有巨大的人员伤亡。```0
   ## 6/4/2023 - [美国东亚和太平洋事务的助理国务卿急访中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E7%BE%8E%E5%9B%BD%E4%B8%9C%E4%BA%9A%E5%92%8C%E5%A4%AA%E5%B9%B3%E6%B4%8B%E4%BA%8B%E5%8A%A1%E7%9A%84%E5%8A%A9%E7%90%86%E5%9B%BD%E5%8A%A1%E5%8D%BF%E6%80%A5%E8%AE%BF%E4%B8%AD%E5%9B%BD)
  ```美国国务院一名高级官员周日抵达北京，计划在未来两天与中国高层举行会议，力促恢复双方沟通渠道。路透社说，此举凸显美国寻求在两国关系紧张之际加强与中国的沟通。美国该高官六四日抵访中国，但美国官方称明天才开始正式访问。```0
@@ -47,7 +51,7 @@
  ```美国白宫宣布，总统拜登已正式签署提高债务上限的法案。该法案经过数周激烈争论后获得国会通过，也避免了灾难性违约。```0
   ## 6/3/2023 - [中一名电动自行车企业老板在巴黎南郊被拘](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E4%B8%AD%E4%B8%80%E5%90%8D%E7%94%B5%E5%8A%A8%E8%87%AA%E8%A1%8C%E8%BD%A6%E4%BC%81%E4%B8%9A%E8%80%81%E6%9D%BF%E5%9C%A8%E5%B7%B4%E9%BB%8E%E5%8D%97%E9%83%8A%E8%A2%AB%E6%8B%98)
  ```法新社转引《巴黎人报》一则消息说，一名43岁的专门从事电动自行车的中国企业家周五被欧洲代表检察官起诉，随后因涉嫌欧洲关税欺诈而被监禁。据知情人士透露，名为李军D(音译LijunD).于2日被金融司法调查局(SEJF)的海关逮捕，然后被警方拘押在塞纳河畔远郊瓦兹河谷省(Val-de-Marne)。```0
-  ## 6/3/2023 - [记念“六四”34周年 美国国会中国委员会发声](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230603-%E8%AE%B0%E5%BF%B5-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4-%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E4%B8%AD%E5%9B%BD%E5%A7%94%E5%91%98%E4%BC%9A%E5%8F%91%E5%A3%B0)
+  ## 6/3/2023 - [纪念“六四”34周年 美国国会中国委员会发声](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230603-%E8%AE%B0%E5%BF%B5-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4-%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E4%B8%AD%E5%9B%BD%E5%A7%94%E5%91%98%E4%BC%9A%E5%8F%91%E5%A3%B0)
  ```今天是1989年六四事件34周年。34年来，六四记念成为海外华人和国际社会的活动，而在中国大陆，六四成为禁忌话题。随着中国政治在极权之路上越走越远，香港也不能再组织公开的六四记念活动。但美国国会暨行政当局中国委员会发声记念六四，并增提彭立发等三人为2023年诺贝尔和平奖的候选人。```0
   ## 6/3/2023 - [六四34周年：海外中国留学生接着点燃蜡烛](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%89%B9%E5%88%AB%E8%8A%82%E7%9B%AE/20230603-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E6%B5%B7%E5%A4%96%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F%E6%8E%A5%E7%9D%80%E7%82%B9%E7%87%83%E8%9C%A1%E7%83%9B)
  ```2023年六月四日是六四天安门事件34周年的纪念日，三十四年了，在天安门惨遭屠杀的受害者究竟是多少依然是一个未知数！死难者家属天安门母亲组织的成员们也一个接一个地追随他们的死去的亲人们遗憾地离开了人世，随着北京政权的日益强硬专横，他们的亲人获得平反昭雪的这一天似乎越来越遥遥无期。不过，虽然中国官方竭尽努力试图将事件从历史上抹去，虽然中国国内的新一代人绝大多数都不知道六四意味着什么，在海外的华人却继续年复一年地举行纪念仪式。最近几年来，一些在海外的中国年轻人，虽然并没有亲身经历六四，但也逐渐加入了纪念六四的队伍，他们甚至勇敢地面对遭受北京政府打压的风险公开地站出来组织自己的纪念活动，生活在巴黎的年轻的艺术工作者蒋不就是其中之一，他向法广介绍了他为何要纪念六四。```0
@@ -55,7 +59,3 @@
  ```中国一位经验丰富的外交官崔天凯在新加坡香格里拉安全与防卫论坛会议上将俄罗斯对乌克兰的侵略战争归因于欧洲安全架构的失败。 荷兰国防部长KajsaOllongren对中国的这种解释提出质疑。因崔天凯是退休外交官，荷兰防长称等候听中国防长的正式官方立场表述。```0
   ## 6/3/2023 - [方济各将访蒙古 称遥望北京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%96%B9%E6%B5%8E%E5%90%84%E5%B0%86%E8%AE%BF%E8%92%99%E5%8F%A4-%E7%A7%B0%E9%81%A5%E6%9C%9B%E5%8C%97%E4%BA%AC)
  ```教皇弗朗西斯将于8月31日至9月4日作访问蒙古之行，这是他去过的最偏远的国度之一，那里只有大约1,300名天主教徒，但由于靠近中国，路透社说蒙古对罗马天主教具有重要的战略意义。```0
-  ## 6/3/2023 - [美国加紧构建对华沟通渠道 一副国务卿明日突访北京](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E5%8A%A0%E7%B4%A7%E6%9E%84%E5%BB%BA%E5%AF%B9%E5%8D%8E%E6%B2%9F%E9%80%9A%E6%B8%A0%E9%81%93-%E4%B8%80%E5%89%AF%E5%9B%BD%E5%8A%A1%E5%8D%BF%E6%98%8E%E6%97%A5%E7%AA%81%E8%AE%BF%E5%8C%97%E4%BA%AC)
- ```美国周六宣布，美国负责东南亚事务的副国务卿丹尼尔-克里登布林克将在未来几天内对中国进行罕见的访问。法新社说，美国显示寻求使两国关系升温。```0
-  ## 6/3/2023 - [德国前军机飞行员在中国训练战机：德国防长立马在香格里拉质问中国防长李尚福](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E5%BE%B7%E5%9B%BD%E5%89%8D%E5%86%9B%E6%9C%BA%E9%A3%9E%E8%A1%8C%E5%91%98%E5%9C%A8%E4%B8%AD%E5%9B%BD%E8%AE%AD%E7%BB%83%E6%88%98%E6%9C%BA-%E5%BE%B7%E5%9B%BD%E9%98%B2%E9%95%BF%E7%AB%8B%E9%A9%AC%E5%9C%A8%E9%A6%99%E6%A0%BC%E9%87%8C%E6%8B%89%E8%B4%A8%E9%97%AE%E4%B8%AD%E5%9B%BD%E9%98%B2%E9%95%BF%E6%9D%8E%E5%B0%9A%E7%A6%8F)
- ```德国《明镜》周刊昨天揭露仍然有德国退役尖端空军士兵在中国训练战斗机飞行员，该爆料在德国正在掀起波澜。德国防长参加在新加坡举行的香格里拉安全与防卫对话论坛，立即在与中国国防部长李尚福会面时，德国国防部长皮斯托瑞斯相当不客气地要求中国结束聘用德国退役飞行员训练中国战机飞行员。中国防长李尚福低调，但指德国防长夸大事情了。```0
