--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,8 @@
 
+  ## 6/4/2023 - [墙外文摘：香港“六四”——个人记忆不灭，集体记忆堪忧](https://www.dw.com/zh/墙外文摘：香港-六四-个人记忆不灭，集体记忆堪忧/a-65820012?maca=chi-rss-chi-all-1127-rdf)
+ ```有评论认为，要完全100％抹走香港的六四记忆，其实是极其困难的事。然而，过去两三年，国家高压达到相当程度，妨碍了六四论述，影响了集体记忆。```0
+  ## 6/4/2023 - [六四香港：六千警防街頭悼念 多人被帶走](https://www.dw.com/zh/六四香港：六千警防街頭悼念-多人被帶走/a-65820016?maca=chi-rss-chi-all-1127-rdf)
+ ```六四事件34週年，悼念集會連續第四年絕跡香港。在肅殺氣氛下，依然有人在這天現身維園一帶，以不同方式表達紀念，但在數千警力嚴防下，任何行動的存活時間比以往更短。而被囚的前支聯會副主席鄒幸彤，據報於獄中進行34小時絕食。```0
   ## 6/4/2023 - [中国：中美激烈冲突对抗是“世界不可承受之痛”](https://www.dw.com/zh/中国：中美激烈冲突对抗是-世界不可承受之痛/a-65819515?maca=chi-rss-chi-all-1127-rdf)
  ```中国国防部长李尚福在香格里拉对话上表示，如果中美发生激烈冲突对抗，将是世界不可承受之痛，相互尊重、和平共处、合作共赢才是中美相处之道。但他强调，在台湾问题上，中国不会容忍任何挑衅行为。```0
   ## 6/4/2023 - [德防长会李尚福 2024将再向印太派船](https://www.dw.com/zh/德防长会李尚福-2024将再向印太派船/a-65819430?maca=chi-rss-chi-all-1127-rdf)
@@ -11,12 +15,12 @@
  ```去年全球低迷的股市，也令很多富豪的财富大幅缩水。百万富翁俱乐部的人数明显低于往年。```0
   ## 6/4/2023 - [谁在为全球反塑料污染公约制造障碍？](https://www.dw.com/zh/谁在为全球反塑料污染公约制造障碍？/a-65782004?maca=chi-rss-chi-all-1127-rdf)
  ```来自175个国家的代表聚集在巴黎联合国教科文组织总部密集谈判，期望达成一项应对塑料污染的全球条约。应该聚焦原生塑料还是再生塑料？环保组织担心谈判的方向走偏了。```0
-  ## 6/4/2023 - [无人机袭击俄罗斯的背后究竟是怎么回事？](https://www.dw.com/zh/无人机袭击俄罗斯的背后究竟是怎么回事？/a-65803958?maca=chi-rss-chi-all-1127-rdf)
- ```俄罗斯对乌克兰的战争中出现新的形势：在俄罗斯领土上更经常地出现军事袭击。这背后是怎么一回事，西方又如何反应？```0
   ## 6/4/2023 - [日本出台新政策：每年投入3.5万亿日元“催生”](https://www.dw.com/zh/日本出台新政策：每年投入3-5万亿日元-催生/a-65807886?maca=chi-rss-chi-all-1127-rdf)
  ```日本政府宣布每年投入约3.5万亿日元“催生”。出生率下降趋势已对社会诸多方面造成严重影响。```0
   ## 6/4/2023 - [基因技术 - 粮食生产的持久发展之路](https://www.dw.com/zh/基因技术-粮食生产的持久发展之路/a-65808887?maca=chi-rss-chi-all-1127-rdf)
  ```围绕转基因食品，有着各种各样令人不安的传言。但事实上，随着转基因技术的不断提升，越来越多的专家都认为，持久性的粮食生产获得了重要和安全的方法。```0
+  ## 6/4/2023 - [无人机袭击俄罗斯的背后究竟是怎么回事？](https://www.dw.com/zh/无人机袭击俄罗斯的背后究竟是怎么回事？/a-65803958?maca=chi-rss-chi-all-1127-rdf)
+ ```俄罗斯对乌克兰的战争中出现新的形势：在俄罗斯领土上更经常地出现军事袭击。这背后是怎么一回事，西方又如何反应？```0
   ## 6/4/2023 - [六四週年之際 王丹陷性騷風暴](https://www.dw.com/zh/六四週年之際-王丹陷性騷風暴/a-65818250?maca=chi-rss-chi-all-1127-rdf)
  ```中國六四學運領導人王丹日前遭一名台灣男子指控性騷擾，包含強吻與強暴未遂。指控者在六四34週年這天召開記者會，要求道歉否則提告。隨後，王丹回應：歡迎提告，支持用法律的方式尋找事情的真相。```0
   ## 6/4/2023 - [客座評論：台灣人為甚麼要知道六四？](https://www.dw.com/zh/客座評論：台灣人為甚麼要知道六四？/a-65818108?maca=chi-rss-chi-all-1127-rdf)
@@ -83,8 +87,6 @@
  ```《商报》的一篇客座评论警告，北京正在努力让欧中相互依赖变成欧洲单方面依赖中国。《明镜周刊》则指出，在对华政策中“去风险”本身就会造成不小的风险，但总归比“脱钩”要好。```0
   ## 5/29/2023 - [威尼斯大运河的水怎么变绿了？](https://www.dw.com/zh/威尼斯大运河的水怎么变绿了？/a-65762361?maca=chi-rss-chi-all-1127-rdf)
  ```当地警方表示，这种神秘的绿色液体不会对威尼斯人的健康构成威胁。```0
-  ## 5/28/2023 - [墙外文摘：让种子飘落你家的花园，长出自由花](https://www.dw.com/zh/墙外文摘：让种子飘落你家的花园，长出自由花/a-65758791?maca=chi-rss-chi-all-1127-rdf)
- ```曾担任香港维园“六四”烛光晚会司仪多年、剧团“六四舞台”创办者列明慧表示，希望让不能在香港存在的《5月35日》，能在其他地方活下来。“等风起时，让争取民主自由的风筝飞得更远，让种子飘落你家的花园，长出自由花”。```0
   ## 5/28/2023 - [约翰·克里斯多夫·巴赫：降E大调前奏曲和赋格曲](https://www.dw.com/zh/约翰·克里斯多夫·巴赫：降e大调前奏曲和赋格曲/a-65758236?maca=chi-rss-chi-all-1127-rdf)
  ```大作曲家约翰·塞巴斯蒂安·巴赫的长兄约翰·克里斯多夫·巴赫是一名管风琴师。他的一些作品也流传下来，比如降E大调前奏曲和赋格曲。```0
   ## 5/28/2023 - [中国去年自然指数贡献份额首次排名全球第一](https://www.dw.com/zh/中国去年自然指数贡献份额首次排名全球第一/a-65733764?maca=chi-rss-chi-all-1127-rdf)
