--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [拆墙运动发起人乔鑫鑫在老挝失联 疑涉中国公安跨境执法](https://www.voachinese.com/a/global-bangfw-organizer-allegedly-arrested/7122261.html)
+ ```“六四”34周年前夕，近期积极呼吁拆除中国网络围墙的异议人士乔鑫鑫在东南亚国家老挝失联。消息人士透露，乔鑫鑫在住所被多名政府人员带走，不排除涉及中国公安跨境执法。有异议人士正透过不同渠道要求美国国务院介入事件。```0
   ## 6/4/2023 - [前中国驻美大使：美国必须停止在中国家门口的军事部署](https://www.voachinese.com/a/former-chinese-ambassador-says-us-must-halt-military-deployments-near-china-20230604/7122158.html)
  ```一位退休的中国资深外交官周日在新加坡表示，如果要恢复两个超级大国之间的高层防务谈判，美国应该本着“诚意”减少靠近中国的军事部署。```0
   ## 6/4/2023 - [六四34周年，部分难属前往北京万安公墓祭奠34年前惨遭军队杀害的亲人。
@@ -44,5 +46,3 @@
  ```美国国防部长奥斯汀6月3日在“香格里拉对话”会上发表的演讲中在强调伙伴关系对确保印太地区共同愿景的重要性时也对中国在印太地区咄咄逼人的行为表示关切。他说，美国不寻求冲突或对抗，但不会在欺凌和胁迫面前退缩。他还表示，台海冲突并不是迫在眉睫，也不是不可避免，但一旦爆发冲突将是毁灭性的。奥斯汀否认美国有意刺激中国武力攻打台湾。```0
   ## 6/3/2023 - [中印互驱记者关系降至新低，边境局势依然紧张或一触即发 ](https://www.voachinese.com/a/as-india-and-china-rivalry-escalates-will-new-delhi-and-beijing-slip-into-another-border-conflict-soon-/7121047.html)
  ```自2020年6月加勒万河谷的流血冲突之后，中印边界争端已持续近三年，且仍无大规模撤军的迹象。两国近日更是互相驱逐记者，进一步限缩沟通渠道。军事专家认为，尽管短期内未必会爆发大规模冲突，中印多轮高层谈判有名无实并且在敏感地带不断强化军事存在，提升了擦枪走火的风险，阻滞双边关系正常化轨迹。```0
-  ## 6/3/2023 - [中俄无视美国在联合国谴责朝鲜发射卫星的呼吁](https://www.voachinese.com/a/china-and-russia-ignore-us-call-at-un-to-condemn-north-korea-launch-20230602/7121345.html)
- ```中国和俄罗斯周五（6月2日）无视美国呼吁联合国安理会团结起来，共同谴责朝鲜本周试图发射卫星，反而指责华盛顿加剧了朝鲜半岛的紧张局势。```0
