--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [美国国务院高级官员抵京访问](https://www.dw.com/zh/美国国务院高级官员抵京访问/a-65820554?maca=chi-rss-chi-all-1127-rdf)
+ ```美国国务院负责东亚事务的助理国务卿周日抵达北京，并将于接下来一周举行会晤。美中关系紧张之际，华盛顿寻求加强与中国的沟通。```0
   ## 6/4/2023 - [墙外文摘：香港“六四”——个人记忆不灭，集体记忆堪忧](https://www.dw.com/zh/墙外文摘：香港-六四-个人记忆不灭，集体记忆堪忧/a-65820012?maca=chi-rss-chi-all-1127-rdf)
  ```有评论认为，要完全100％抹走香港的六四记忆，其实是极其困难的事。然而，过去两三年，国家高压达到相当程度，妨碍了六四论述，影响了集体记忆。```0
   ## 6/4/2023 - [六四香港：六千警防街頭悼念 多人被帶走](https://www.dw.com/zh/六四香港：六千警防街頭悼念-多人被帶走/a-65820016?maca=chi-rss-chi-all-1127-rdf)
